/* English */ adding price sense with translations from [[commercial at]] <at#48429531>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -9,7 +9,6 @@
 ** {{homophones|lang=en|@}}
 * {{qualifier|unstressed}} {{IPA|/ət/|lang=en}}
 ** {{homophones|lang=en|it}} {{qualifier|unstressed; only in some accents}}
-<!-- 1 syllable words !-->
 
 ===Etymology 1===
 From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{inh|en|gem-pro|*at||at, near, to}}, from {{inh|en|ine-pro|*h₂éd||near, at}}. Cognate with {{cog|sco|at||at}}, {{cog|frr|äät}}, {{m|frr|äit}}, {{m|frr|et}}, {{m|frr|it||at}}, {{cog|da|at||to}}, {{cog|sv|åt||for, toward}}, {{cog|no|åt||to}}, {{cog|fo|at||at, to, toward}}, {{cog|is|að||to, towards}}, {{cog|got|𐌰𐍄||at}}, {{cog|la|ad||to, near}}.
@@ -34,6 +33,8 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 #: {{ux|en|He threw the ball '''at''' me.&emsp; He shouted '''at''' her.}}
 #* {{RQ:Frgsn Zlnstn|IV}}
 #*: “My Continental prominence is improving,” I commented dryly. ¶ Von Lindowe cut '''at''' a furze bush with his silver-mounted rattan. ¶ “Quite so,” he said as dryly, his hand at his mustache. “I may say if your intentions were known your life would not be worth a curse.”
+# {{n-g|Denotes a price.}}
+#: {{ux|en|3 apples '''at''' 2¢ (each) &nbsp; The offer was '''at''' $30,000 before negotiations.}}
 # [[occupy|Occupied]] in (activity).
 #: {{ux|en|men '''at''' work}}
 # In a state of.
@@ -228,6 +229,15 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 * Thai: {{t+|th|ณ}}
 * Tok Pisin: {{t|tpi|long}}
 * Walloon: {{t+|wa|a}}
+{{trans-bottom}}
+
+{{trans-top|denoting a price}}
+* Catalan: {{t|ca|a}}
+* Dutch: {{t+|nl|aan}}
+* Finnish: {{t+check|fi|à}}
+{{trans-mid}}
+* French: {{t+|fr|à}}
+* Spanish: {{t|es|a}}
 {{trans-bottom}}
 
 ====Noun====
