--- a/en/c/cult of personality.856173.wikitext
+++ b/en/c/cult of personality.856173.wikitext
@@ -31,7 +31,7 @@
 * Lithuanian: {{t|lt|asmenybės kultas|m}}
 * Polish: {{t-needed|pl}}
 * Portuguese: {{t|pt|culto de personalidade|m}}, {{t|pt|culto da personalidade|m}}
-* Romanian: {{t-needed|ro}}
+* Romanian: {{t+|ro|cultul personalității|n}}
 * Russian: {{t|ru|культ ли́чности|m}}
 * Serbo-Croatian: {{t-needed|sh}}
 * Spanish: {{t|es|culto a la personalidad|m}}
