--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -26,6 +26,7 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 * {{l|en|Nintendinitis}}
 * {{l|en|Nintendocore}}
 * {{l|en|Nintendo thumb}}
+* {{l|en|Nintendrone}}
 
 ====Translations====
 {{trans-top|Nintendo Entertainment System, or other video game system made by Nintendo}}
