--- a/en/r/Roemenië.4076.wikitext
+++ b/en/r/Roemenië.4076.wikitext
@@ -4,6 +4,7 @@
 * {{IPA|/ruˈmeː.ni.(j)ə/|lang=nl}}
 * {{a|NL}} {{audio|Nl-Roemenië.ogg|audio|lang=nl}}
 * {{hyphenation|lang=nl|Roe|me|nië}}
+* {{rhyme|lang=nl|eːniə}}
 
 ===Proper noun===
 {{nl-proper noun|n}}
