/* Translations */Added German translation <vote with one's feet#48436498>

--- a/en/v/vote with one's feet.774902.wikitext
+++ b/en/v/vote with one's feet.774902.wikitext
@@ -38,7 +38,7 @@
 * Dutch: {{t-needed|nl}}
 * Finnish: {{t|fi|äänestää jaloillaan}}
 * French: {{t|fr|aller à la pêche}}, {{t|fr|voter avec ses pieds}}
-* German: {{t-needed|de}}
+* German: {{t|de|mit den Füßen abstimmen}}
 {{trans-mid}}
 * Hindi: {{t-needed|hi}}
 * Italian: {{t-needed|it}}
