--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -10,7 +10,7 @@
 * {{rhymes|aʊnd|lang=en}}
 
 ===Etymology 1===
-See [[bind]]
+See {{m|en|bind}}.
 
 ====Verb====
 {{head|en|verb form}}
@@ -39,7 +39,7 @@ See [[bind]]
 #: {{ux|en|They were '''bound''' to come into conflict eventually.}}
 # {{lb|en|linguistics|of a [[morpheme]]}} That cannot stand alone as a free word.
 # {{lb|en|mathematics|logic|of a [[variable]]}} [[constrained|Constrained]] by a [[quantifier]].
-# {{lb|en|dated}} [[constipated]]; [[costive]]
+# {{lb|en|dated}} [[constipated|Constipated]]; [[costive]].
 # Confined or restricted to a certain place; e.g. [[railbound]].
 # Unable to move in certain conditions; e.g. [[snowbound]].
 
@@ -87,6 +87,15 @@ See [[bind]]
 * Russian: {{t+|ru|непреме́нный}}
 {{trans-bottom}}
 
+{{trans-top|constrained by something, or constrained to something}}
+* Bulgarian: {{t+|bg|свързан}}, {{t+|bg|обвързан}}
+* Danish: {{t|da|begrænset}}
+* Finnish: {{t+|fi|sidottu}}
+{{trans-mid}}
+* Italian: {{t+|it|obbligato}}, {{t+|it|costretto}}
+* Russian: {{t+|ru|свя́занный}}, {{t+|ru|обяза́нный}}
+{{trans-bottom}}
+
 ===Etymology 2===
 From {{etyl|enm|en}} {{m|en|bounde}}, from {{etyl|fro|en}} {{m|en|bunne}}, from {{etyl|ML.|en}} {{m|la|bodina}}, earlier {{m|la|butina||a bound, limit}}
 
@@ -96,7 +105,7 @@ From {{etyl|enm|en}} {{m|en|bounde}}, from {{etyl|fro|en}} {{m|en|bunne}}, from 
 # {{lb|en|often|used in plural}} A [[boundary]], the [[border]] which one must [[cross]] in order to enter or leave a territory.
 #: ''I reached the northern '''bound''' of my property, took a deep breath and walked on.''
 #: ''Somewhere within these '''bounds''' you may find a buried treasure.''
-# {{lb|en|mathematics}} a [[value]] which is known to be greater or smaller than a given [[set]] of values
+# {{lb|en|mathematics}} A [[value]] which is known to be greater or smaller than a given [[set]] of values.
 
 =====Derived terms=====
 {{rel-top4|terms derived from the noun bound ("boundary, limit")}}
@@ -262,8 +271,8 @@ Alteration of {{m|en|boun}}, with '''-d''' partly for [[euphonic]] effect and pa
 ====Adjective====
 {{en-adj}}
 
-# {{lb|en|obsolete}} [[ready]], [[prepared]].
-# ready, [[able]] to start or go (to); moving in the direction (of).
+# {{lb|en|obsolete}} [[ready|Ready]], [[prepared]].
+# Ready to start or go (to); moving in the direction (of).
 #: ''Which way are you '''bound'''?
 #: ''Is that message '''bound''' for me?
 
@@ -292,15 +301,6 @@ Alteration of {{m|en|boun}}, with '''-d''' partly for [[euphonic]] effect and pa
 * Italian: {{t+|it|diretto}}, {{t+|it|incamminato}}
 * Japanese: {{t|ja|行き|tr=... yuki no|alt=…行きの|sc=Jpan}}, {{t+|ja|向かう|tr=... ni mukatte|alt=…に向かって|sc=Jpan}}
 * Russian: {{t+|ru|направляться|alt=направля́ющийся}}
-{{trans-bottom}}
-
-{{trans-top|constrained by something, or constrained to something}}
-* Bulgarian: {{t+|bg|свързан}}, {{t+|bg|обвързан}}
-* Danish: {{t|da|begrænset}}
-* Finnish: {{t+|fi|sidottu}}
-{{trans-mid}}
-* Italian: {{t+|it|obbligato}}, {{t+|it|costretto}}
-* Russian: {{t+|ru|свя́занный}}, {{t+|ru|обяза́нный}}
 {{trans-bottom}}
 
 ===Anagrams===
