--- a/en/t/Tijuana.741400.wikitext
+++ b/en/t/Tijuana.741400.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-Borrowed from {{bor|en|es|Tijuana}}, possibly from {{der|en|dih|Tiwan|lit=by-the-sea}}.
+Borrowed from {{bor|en|es|Tijuana}}, possibly from {{der|en|nai-kum|Tiwan|lit=by-the-sea}}.
 
 ===Pronunciation===
 {{wikipedia}}
@@ -59,7 +59,7 @@ Borrowed from {{bor|en|es|Tijuana}}, possibly from {{der|en|dih|Tiwan|lit=by-the
 ==Spanish==
 
 ===Etymology===
-Possibly from {{der|es|dih|Tiwan|lit=by-the-sea}}.
+Possibly from {{der|es|nai-kum|Tiwan|lit=by-the-sea}}.
 
 ===Pronunciation===
 {{wikipedia|lang=es}}
