--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -14,11 +14,13 @@ From the prefix {{m|en|mega-}}, from {{der|en|grc|μέγας|t=great, large, mig
 # {{lb|en|informal}} Very large.
 #* '''2004''', Nigel Coates, ''Collidoscope: new interior design'' (page 26)
 #*: Follow those in the know to the fifth floor of Sega's Joy Polis, a '''mega''' indoor amusement park that's part of the Odaiba Decks Tokyo Bay entertainment complex near Tange's Fuji Television building.
-# {{lb|en|slang|1990s}} [[great]]; [[excellent]]
+# {{lb|en|slang}} [[great]]; [[excellent]]
 #* '''1998''', John Barwick, ''Targeting Text'' (page 25)
 #*: We had a '''mega''' time until Peter fell in the fish pond and cut his leg.
 #* '''2011''', Anna Wilson, ''Pup Idol: Top of the Pups''
 #*: It was totally '''mega'''. The audience clapped and cheered when Teasel had finally finished. So did I.
+#* {{w|Liam Gallagher}}
+#*: I've been a City fan since I was a kid, so to be involved with the launch of a new kit is colossal. Manchester City fans are known for having a lot of style and the new shirt looks '''mega'''.
 
 ====Related terms====
 <!-- These are mainly nonce words, unless specific definitions are known and entries can be set up
