--- a/en/h/hajjis.746908.wikitext
+++ b/en/h/hajjis.746908.wikitext
@@ -3,4 +3,8 @@
 ===Noun===
 {{head|en|noun plural form}}
 
-# {{plural of|hajji|lang=en}}
+# {{plural of|hajji|lang=en}}.
+
+====Alternative forms====
+* {{l|en|haggis}}
+* {{l|en|hajis}}
