--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -296,7 +296,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Uzbek: {{t|uz|choʻchka}}
 * Venetian: {{t+|vec|mas-cio|m}}, {{t|vec|porselo|m}}, {{t|vec|porzèl|m}}
 * Veps: {{t|vep|siga}}
-* Vietnamese: {{t+|vi|heo}}, {{t+|vi|lợn}}
+* Vietnamese: {{t+|vi|heo}}, {{t+|vi|lợn}}, {{t+|vi|cúi}}
 * Volapük: {{qualifier|♂♀}} {{t+|vo|svin}}, {{qualifier|♂}} {{t+|vo|hisvin}}, {{qualifier|♀}} {{t+|vo|jisvin}}, {{qualifier|obsolete, ♂}} {{t|vo|omsvin}}, {{t|vo|domasvin}} {{qualifier|domestic}}
 * Voro: {{t|vor|tsiga}}
 * Votic: {{t|vot|sika}}
