/* Translations */ fi <at#48461251>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -234,7 +234,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 {{trans-top|denoting a price}}
 * Catalan: {{t|ca|a}}
 * Dutch: {{t+|nl|aan}}
-* Finnish: {{t+check|fi|à}}
+* Finnish: {{t+|fi|à}} {{q|unit price}}
 {{trans-mid}}
 * French: {{t+|fr|à}}
 * Spanish: {{t|es|a}}
