--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -314,6 +314,7 @@ From {{etyl|enm|en}} {{m|enm|benden}}, from {{etyl|ang|en}} {{m|ang|bendan||to b
 * Finnish: {{t|fi|kytky}}
 * French: {{t+|fr|nœud|m}}
 {{trans-mid}}
+* Hebrew: {{t+|he|רֶכֶס|m|tr=rekhes}}
 * Italian: {{t+|it|nodo|m}}
 * Occitan: {{t|oc|nos|m}}, {{t|oc|nosèl|m}}, {{t|oc|laç|m}}
 * Swahili: {{t+|sw|pinda}}
