--- a/en/h/have a way with.775543.wikitext
+++ b/en/h/have a way with.775543.wikitext
@@ -11,7 +11,7 @@
 * Chinese:
 *: Mandarin: {{t-needed|cmn}}
 {{trans-mid}}
-* Finnish: {{t|fi|[[olla]] [[taitava]]}}
+* Finnish: {{t|fi|[[olla]] [[taitava]] [[jossakin]]}}
 * Portuguese: {{t-needed|pt}}
 {{trans-bottom}}
 
