--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -69,8 +69,9 @@ Earlier {{m|en|seise}}, from {{etyl|enm|en}} {{m|enm|seisen}}, {{m|enm|sesen}}, 
 * Italian: {{t+|it|prendere}}, {{t+|it|afferrare}}
 * Japanese: {{t|ja|捉える|tr=とらえる, toraeru}}, {{t+|ja|つかむ|tr=tsukamu}}
 * Korean: {{t+|ko|붙잡다}}
-{{trans-mid}}
 * Latin: {{t+|la|capere}}, {{t|la|possideo}}
+{{trans-mid}}
+* Mirandese: {{t|mwl|agarrar}}
 * Ngazidja Comorian: {{t|zdj|zingara|alt=uzingara}}, {{t|zdj|siha|alt=usiha}}
 * North Frisian: {{t|frr|gripe}}
 * Norwegian: {{t|no|gripe}}
