Reverted edits by [[Special:Contributions/2607:FB90:48B0:B7AD:87CD:CEF8:484D:B8CA|2607:FB90:48B0:B7AD:87CD:CEF8:484D:B8CA]]. If you think this rollback is in error, please leave a message on my talk page. <at#48480415>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -270,13 +270,14 @@ From {{der|az|trk-pro|*at|t=horse}}.
 
 ===Noun===
 {{az-variant|c=ат|r=at|a=آت}}
-{{az-noun|ı|lar}}klm.k
-K mk IV..
+{{az-noun|ı|lar}}
 
-----olel.k kmWoooagln-decl|c|a}}
+# [[horse]]
 
-BBVR. Mimi e
-R a k hr.  K t MNmm mi re LP he NK vim km l
+====Declension====
+{{az-latin-noun-decl|c|a}}
+
+----
 
 ==Chuukese==
 
