--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -73,6 +73,7 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{der|en|fro|atendre||to a
 * Catalan: {{t+|ca|atendre}}
 * Czech: {{t+|cs|zabývat se}}
 * Finnish: {{t+|fi|huolehtia}}, {{t+|fi|pitää}} {{t+|fi|huoli|alt=huolta}}, {{t+|fi|hoitaa}} ([[tehtävä]]/[[asia]]/[[juttu]]/[[homma]])
+* Galician: {{t+|gl|espeitar}}, {{t+|gl|catar}}, {{t+|gl|chatar}}, {{t+|gl|precurar}}, {{t+|gl|atender}}
 * German: {{t+|de|kümmern}}, {{t+|de|beachten}}
 * Greek: {{t+|el|φροντίζω|sc=Grek}}, {{t+|el|μεριμνώ|sc=Grek}}
 {{trans-mid}}
@@ -95,6 +96,7 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{der|en|fro|atendre||to a
 * Esperanto: {{t|eo|ĉeesti}}
 * Finnish: {{t+|fi|osallistua}}, {{t+|fi|olla}} {{t+|fi|läsnä}}
 * French: {{t+|fr|assister}}, {{t+|fr|présent|alt=être présent}}
+* Galician: {{t+|gl|asistir}}, {{t+|gl|percurar}}
 * German: {{t+|de|teilnehmen}}, {{t+|de|besuchen}}
 * Greek: {{t|el|παραβρίσκομαι|sc=Grek}}, {{t+|el|παρευρίσκομαι|sc=Grek}}, {{t+|el|παρίσταμαι|sc=Grek}}
 * Hungarian: {{t+|hu|eljár}}, {{t+|hu|jár}}, {{t+|hu|részt vesz}}
