--- a/en/m/moonstruck.720222.wikitext
+++ b/en/m/moonstruck.720222.wikitext
@@ -8,6 +8,8 @@
 
 # {{lb|en|obsolete}} [[crazy|Crazy]] or [[insane]] when affected by the [[phase]]s of the [[Moon]].
 # {{lb|en|by extension}} Showing [[irrational]] behaviour, especially of a [[romantic]] or [[sentimental]] nature.
+#* '''1902''', {{w|William James}}, ''TheVarieties of Relgious Experience'''', Lectures 4 & %:
+#*: [W]e can also overlook the verbiage of a good deal of the mind-cure literature, some of which is so '''moonstruck''' with optimism and so vaguely expressed that an academically trained intellect finds it almost impossible to read it at all.
 # {{lb|en|obsolete}} Made sick, or (like fishes) unsuitable for food, by the supposed [[influence]] of the Moon.
 
 ====Synonyms====
