--- a/en/m/moonstruck.720222.wikitext
+++ b/en/m/moonstruck.720222.wikitext
@@ -8,8 +8,10 @@
 
 # {{lb|en|obsolete}} [[crazy|Crazy]] or [[insane]] when affected by the [[phase]]s of the [[Moon]].
 # {{lb|en|by extension}} Showing [[irrational]] behaviour, especially of a [[romantic]] or [[sentimental]] nature.
-#* '''1902''', {{w|William James}}, ''TheVarieties of Relgious Experience'''', Lectures 4 & %:
+#* '''1902''', {{w|William James}}, ''The Varieties of Religious Experience'', Lectures 4 & 5:
 #*: [W]e can also overlook the verbiage of a good deal of the mind-cure literature, some of which is so '''moonstruck''' with optimism and so vaguely expressed that an academically trained intellect finds it almost impossible to read it at all.
+#* '''1925''', {{w|Sinclair Lewis}}, ''Arrowsmith'', Chapter 21, IV:
+#*: The full moon was spacious now behind the maples. The seedy Pickerbaugh domain was enchanted […] and over all the world was the proper witchery of '''moonstruck''' love.
 # {{lb|en|obsolete}} Made sick, or (like fishes) unsuitable for food, by the supposed [[influence]] of the Moon.
 
 ====Synonyms====
