--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -131,7 +131,7 @@ The verb comes from the supposed cunningness of the weasel.
 {{trans-bottom}}
 
 {{trans-top|any mammal of the family ''Mustelidae''}}
-* Esperanto: {{qualifier|♂♀}} {{t|eo|musteledo}}, {{qualifier|♂}} {{t|eo|virmusteledo}}, {{qualifier|♀}} {{t|eo|musteledino}}
+* Esperanto: {{qualifier|♂♀}} {{t|eo|musteledo}}, {{qualifier|♂}} {{t|eo|virmusteledo}}, {{qualifier|♀}} {{t|eo|musteledino}}, {{t|eo|mustelo}}
 * Finnish: {{t+|fi|näätäeläin}}
 * Irish: {{t|ga|easóg|f}}, {{t|ga|cailín uasal|m}}, {{t|ga|beainín uasal|f}}
 {{trans-mid}}
