--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -27,6 +27,7 @@
 * Finnish: {{t|fi|länsifriisi}}
 * French: {{t|fr|frison occidental|m}}
 * Galician: {{t+|gl|frisón|m}}
+* Georgian: {{t|ka|დასავლეთფრიზიული}}, {{t|ka|დასავლეთფრიზიული ენა}}
 * German: {{t+|de|Westfriesisch|n}}
 {{trans-mid}}
 * Italian: {{t|it|frisone occidentale|m}}
@@ -45,6 +46,7 @@
 * Dutch: {{t|nl|West-Fries}}
 * Finnish: {{t|fi|[[länsifriisiläinen]] [[murre]]}}
 * Galician: {{t|gl|frisón occidental}}
+* Georgian: {{t|ka|დასავლეთფრიზიული}}
 * Italian: {{t|it|frisone occidentale|m}}
 {{trans-mid}}
 * Polish: {{t|pl|zachodniofryzyjski|m}}
