t+es:[[en aquel entonces]] ([[WT:EDIT|Assisted]]) <then#48502760>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -115,7 +115,7 @@ From {{etyl|enm|en}} {{m|enm|then|then(ne)}}, {{m|enm|than|than(ne)}}, from {{et
 * Slovene: {{t|sl|nató}}
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|pótom}}, {{t|dsb|pón}}
-* Spanish: {{t+|es|entonces}}
+* Spanish: {{t+|es|entonces}}, {{t|es|en aquel entonces}}
 * Swedish: {{t+|sv|då}}
 * Telugu: {{t+|te|అప్పుడు|tr=appuDu}}
 * Thai: {{t|th|ในตอนนั้น|tr=nai dton-nán}}
