--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -65,12 +65,14 @@ Earlier {{m|en|seise}}, from {{etyl|enm|en}} {{m|enm|seisen}}, {{m|enm|sesen}}, 
 * Finnish: {{t+|fi|tarttua}}
 * French: {{t+|fr|saisir}}, {{t+|fr|saisir|alt=se saisir de}}
 * German: {{t+|de|ergreifen}}, {{t+|de|fassen}}, {{t+|de|greifen}}
+* Greek:
+*: Ancient: {{t|grc|συλλαμβάνω|tr=syllambanō}}
 * Hungarian: {{t+|hu|megfog}}, {{t+|hu|megragad}}
 * Italian: {{t+|it|prendere}}, {{t+|it|afferrare}}
 * Japanese: {{t|ja|捉える|tr=とらえる, toraeru}}, {{t+|ja|つかむ|tr=tsukamu}}
 * Korean: {{t+|ko|붙잡다}}
-* Latin: {{t+|la|capere}}, {{t|la|possideo}}
 {{trans-mid}}
+* Latin: {{t+|la|capere}}, {{t|la|possideo}}
 * Mirandese: {{t|mwl|agarrar}}
 * Ngazidja Comorian: {{t|zdj|zingara|alt=uzingara}}, {{t|zdj|siha|alt=usiha}}
 * North Frisian: {{t|frr|gripe}}
