--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -39,6 +39,7 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 * Hungarian: {{t+|hu|fogadás}}
 * Italian: {{t+|it|scommessa|f}}
 * Latvian: {{t+|lv|likme|f}}, {{t|lv|derības|f-p}}
+* Maltese: {{t|mt|mħatra}}
 * Norman: {{t|nrf|gageaille|f}}
 * Norwegian: {{t|no|veddemål|n}}
 * Polish: {{t+|pl|zakład|m}}
