--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -37,6 +37,7 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 * Hebrew: {{t|he|התערבות|f|tr=hitarvut}}
 {{trans-mid}}
 * Hungarian: {{t+|hu|fogadás}}
+* Icelandic: {{t|is|veðmál|n}}
 * Italian: {{t+|it|scommessa|f}}
 * Latvian: {{t+|lv|likme|f}}, {{t|lv|derības|f-p}}
 * Maltese: {{t|mt|mħatra}}
