--- a/en/m/make a killing.742288.wikitext
+++ b/en/m/make a killing.742288.wikitext
@@ -7,12 +7,12 @@
 #* '''1913''', [[w:Rex Ellingwood Beach|Rex Ellingwood Beach]], ''The Iron Trail: An Alaskan Romance'', ch. 5:
 #*: "Now if they were playing faro I could '''make a killing'''."
 #* '''2009''', Tom Huddleston, "[http://www.timeout.com/film/chicago/features/show-feature/6652/whats-all-the-fuss-about-slumdog-millionaire.html?cpage=5&ccat=27 What's all the fuss about 'Slumdog Millionaire'?]," ''Time'', 17 Jan.:
-#*: Danny Boyle's critical darling 'Slumdog Millionaire' has '''made a killing''' at the box office and is now being lavished with awards
+#*: Danny Boyle's critical darling 'Slumdog Millionaire' has '''made a killing''' at the box office and is now being lavished with awards.
 
 ====Usage notes====
 * The term was used in the literal sense by American bison hunters to describe the act of shooting a large number of buffalo in a short period of time:
 : '''1907''', John R. Cook, ''The Border and the Buffalo'', Citadel Press (1967), page 118 (describing events occurring in the 1870s):
-:: Buck said if I would stay with him he would '''make a killing''' as long as it would pay to stay; said he would give me 30 cents apiece for all the buffaloes I would skin and peg out.
+:: Buck said if I would stay with him he would '''make a killing''' as long as it would pay to stay; said he would give me 30 cents apiece for all the buffaloes I would skin and peg out
 
 ====Translations====
 {{trans-top|to win or earn a large amount of money}}
