--- a/en/m/make a killing.742288.wikitext
+++ b/en/m/make a killing.742288.wikitext
@@ -12,7 +12,7 @@
 ====Usage notes====
 * The term was used in the literal sense by American bison hunters to describe the act of shooting a large number of buffalo in a short period of time:
 : '''1907''', John R. Cook, ''The Border and the Buffalo'', Citadel Press (1967), page 118 (describing events occurring in the 1870s):
-:: Buck said if I would stay with him he would '''make a killing''' as long as it would pay to stay; said he would give me 30 cents apiece for all the buffaloes I would skin and peg out
+:: Buck said if I would stay with him he would '''make a killing''' as long as it would pay to stay; said he would give me 30 cents apiece for all the buffaloes I would skin and peg out. Fuck I like sexy girls
 
 ====Translations====
 {{trans-top|to win or earn a large amount of money}}
