t+gl:[[asubiar]] t+gl:[[pitar]] t+gl:[[chifrar]] ([[WT:EDIT|Assisted]]) <whistle#48729494>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -255,6 +255,7 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 * Finnish: {{t+|fi|viheltää}}
 * French: {{t+|fr|siffler}}
 * Friulian: {{t|fur|šivîlâ}}
+* Galician: {{t+|gl|asubiar}}, {{t|gl|pitar}}, {{t|gl|chifrar}}
 * Georgian: {{t-needed|ka}}
 * German: {{t+|de|pfeifen}}, {{t+|de|flöten}}
 * Greek: {{t+|el|σφυρίζω}}
