--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -104,7 +104,7 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Dhivehi: {{t|dv|ޖަޒާ|sc=Thaa}}
 * Dogrib: {{t|dgr|dı}}
 * Dutch: {{t+|nl|eiland|n}}
-* Egyptian: {{t-egy|jw|h=N18:N23*Z1}}, {{t-egy|mꜣy|h=G3-i-i-N21:Z1}}
+* Egyptian: {{t-egy|jw|m|h=N18:N23*Z1}}, {{t-egy|mꜣwt|f|h=mA-A-W:t-N23:Z1}}
 * Emilian: {{t|egl|îsla|f}}
 * Esperanto: {{t+|eo|insulo}}
 * Estonian: {{t+|et|saar}}
