/* Pronunciation */ both pronunciations are common in Canada <again#48828856>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -8,7 +8,7 @@
 ===Pronunciation===
 * {{a|UK}} {{IPA|/əˈɡeɪn/|/əˈɡɛn/|lang=en}}
 * {{a|US}} {{IPA|/əˈɡɛn/|lang=en}}
-* {{a|Canada}} {{IPA|/əˈɡeɪn/|lang=en}}
+* {{a|Canada}} {{IPA|/əˈɡɛn/|/əˈɡeɪn/|lang=en}}
 * {{audio|en-us-again.ogg|Audio (US)|lang=en}}
 * {{audio|En-uk-again.ogg|Audio (UK)|lang=en}}
 * {{rhymes|eɪn|ɛn|lang=en}}
