--- a/en/a/alkalic.775485.wikitext
+++ b/en/a/alkalic.775485.wikitext
@@ -10,7 +10,7 @@
 {{en-adj}}
 
 # {{lb|en|geology|of a rock}} Containing a relatively high proportion of [[alkali]]; [[alkaline]].
-#* {{quote-book||Peter Morrison Vitousek|Nutrient Cycling and Limitation: Hawai'i as a Model System|page=12|isbn=069111580X|url=http://books.google.com/books?id=4fZXNKC8FnMC|passage=This rejuvenation-stage or post-erosional volcanism produces lava even more '''alkalic''' than late-stage volcanism.}}
+#* {{quote-book|2004|Peter Morrison Vitousek|Nutrient Cycling and Limitation: Hawai'i as a Model System|page=12|isbn=069111580X|url=http://books.google.com/books?id=4fZXNKC8FnMC|passage=This rejuvenation-stage or post-erosional volcanism produces lava even more '''alkalic''' than late-stage volcanism.}}
 
 ====See also====
 * {{pedialite|Igneous rock}}
