t+gmq-bot:[[pöll]] ([[WT:EDIT|Assisted]]) <bubble#48887588>

--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -344,6 +344,7 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 * Swedish: {{t+|sv|bubbla}}
 * Walloon: {{t-needed|wa}}
 * Welsh: {{t+|cy|byrlymu}}
+* Westrobothnian: {{t|gmq-bot|pöll}}
 * ǃXóõ: {{t|nmn|tsàhã}}
 {{trans-bottom}}
 
