--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -30,7 +30,7 @@ From {{m|en|bend}}.
 |url=http://www.avclub.com/review/ambitious-war-planet-apes-ends-surrendering-formul-257757
 |page=
 |passage={{...}}in the ape posse, '''bent''' on vengeance, traversing landscapes clothed in snow and bristling with California red fir and silver pine, spooking human stragglers, and running across fresh graves as they search for the nameless colonel and try to piece together why the humans are killing each other. }}
-# Of a person, leading a life of [[crime]].
+# (Of a person) leading a life of [[crime]].
 # {{lb|en|slang|football}} [[inaccurate]] at [[shooting]]
 #: ''That shot was so '''bent''' it left the pitch.''
 # {{lb|en|colloquial|chiefly|US}} Suffering from [[the bends]]
