--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -3,7 +3,7 @@
 [[Image:Mustela frenata.jpg|thumb|A  '''weasel''' (1).]]
 
 ===Alternative forms===
-* {{l|en|weazel}}
+* {{l|en|weazel}} {{qual|archaic}}
 
 ===Etymology===
 From {{etyl|enm|en}} {{m|enm|wesele}}, from {{etyl|ang|en}} {{m|ang|weosule|}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*wisulǭ}} (compare {{cog|fy|wezeling|}}, {{cog|nds|Wessel}}, {{m|nds|Wissel}}, {{cog|nl|wezel|}}, {{cog|de|Wiesel|}}, {{cog|sv|vessla}}), from {{etyl|ine-pro|en}} {{m|ine-pro|*wiselos}} (compare [[Irish]] {{m|ga|fíal}} 'ferret'), from *''wis''- 'musk, stink' (compare {{cog|la|virus}} 'slimy liquid, mud; stench', {{cog|sa|विस्र}} 'musty, smelling of raw meat)'.
