--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -104,6 +104,7 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 * Swahili: {{t+|sw|kipenga}}, {{t+|sw|firimbi}}, {{t+|sw|filimbi}}
 * Swedish: {{t+|sv|vissla|c}}, {{t+|sv|pipa|c}}, {{t+|sv|visselpipa|c}}
 * Tagalog: {{t|tl|sipol}}, {{t+|tl|pito}}
+* Tajik: {{t|tg|ҳуштак}}
 * Thai: {{t+|th|นกหวีด}}
 * Turkish: {{t+|tr|düdük}}
 * Ukrainian: {{t|uk|свист|m|sc=Cyrl}}, {{t|uk|свисто́к|m|sc=Cyrl}}, {{t|uk|сюрчо́к|m|sc=Cyrl}}
