--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -15,7 +15,7 @@ From {{der|en|frm|théorie}}, from {{der|en|LL.|theōria}}, from {{der|en|grc|θ
 # {{lb|en|obsolete}} Mental [[conception]]; [[reflection]], [[consideration]]. {{defdate|16th-18th c.}}
 #* '''1646''', {{w|Thomas Browne}}, ''Pseudodoxia Epidemica'', VII.19:
 #*: As they encrease the hatred of vice in some, so doe they enlarge the '''theory''' of wickednesse in all.
-# {{lb|en|sciences}} A [[coherent]] [[statement]] or set of ideas that [[explain]]s [[observe]]d [[fact]]s or [[phenomenon|phenomena]], or which sets out the [[law]]s and principles of something known or observed; a hypothesis confirmed by observation, experiment etc. {{defdate|from 17th c.}}
+# {{lb|en|sciences}} A [[coherent]] [[statement]] or set of ideas that [[explain]]s [[observe]]d [[fact]]s or [[phenomenon|phenomena]] and correctly predicts new facts or phenomena not previously observed, or which sets out the [[law]]s and principles of something known or observed; a hypothesis confirmed by observation, experiment etc. {{defdate|from 17th c.}}
 #* '''2002''', Duncan Steel, ''The Guardian'', 23 May 2002:
 #*: It was only when Einstein's '''theory''' of relativity was published in 1915 that physicists could show that Mercury's "anomaly" was actually because Newton's gravitational '''theory''' was incomplete.
 #* '''2003''', {{w|Bill Bryson}}, ''A Short History of Nearly Everything'', BCA, p. 118:
