--- a/en/t/tribosphenic.801872.wikitext
+++ b/en/t/tribosphenic.801872.wikitext
@@ -1,6 +1,10 @@
 ==English==
+[[File:Tribosphenic molar.svg|thumb|Tribosphenic molar]]
 
 ===Adjective===
 {{en-adj}}
 
 # {{lb|en|biology}} Describing the [[molar]]s of some [[insectivore]]s that have three peaks
+
+===Further reading===
+*{{pedia|Molar_(tooth)#Tribosphenic|Tribosphenic molar}}
