t+cmn:[[嘎]] t+cmn:[[呱]] t-balance ([[WT:EDIT|Assisted]]) <quack#48997043>

--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -17,6 +17,8 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken||to croak like a frog; make a noise
 =====Translations=====
 {{trans-top|sound made by a duck}}
 * Arabic: {{t|ar|بَطْبَطَة|f}}, {{t|ar|زَبْط|m}}
+* Chinese:
+*: Mandarin: {{t+|cmn|嘎|tr=gá}}, {{t+|cmn|呱|tr=guā}}
 * Danish: {{t+|da|rap|n}}
 * Dutch: {{t+|nl|kwak}}
 * Estonian: {{t+|et|prääks}}
@@ -29,8 +31,8 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken||to croak like a frog; make a noise
 * Icelandic: {{t|is|andagagg|n}}, {{t|is|guss|n}}
 * Ido: {{t+|io|kroaso}}, {{t+|io|bramo}}
 * Irish: {{t|ga|vác|m}}
-* Italian: {{t|it|qua qua|m}}
 {{trans-mid}}
+* Italian: {{t|it|qua qua|m}}
 * Japanese: {{t|ja|ガー ガー|tr=gā-gā}}, {{t|ja|クェッ クェッ|tr=quek-quek}}, {{t|ja|クワッ クワッ|tr=quwak-quwak}}
 * Macedonian: {{t|mk|квак|tr=kvák}}
 * Malay: {{t|ms|wak}}
