/* Latin */ Added pronunciation <enumerate#49000589>

--- a/en/e/enumerate.34095.wikitext
+++ b/en/e/enumerate.34095.wikitext
@@ -64,6 +64,9 @@ From {{etyl|la|en}} {{m|la|enumerātus}} < {{m|la|enumerō}}.
 
 ==Latin==
 
+===Pronunciation===
+* {{la-IPA|ēnumerāte}}
+
 ===Verb===
 {{la-verb-form|ēnumerāte}}
 
