/* English */ Added pronunciation <enumerate#49000598>

--- a/en/e/enumerate.34095.wikitext
+++ b/en/e/enumerate.34095.wikitext
@@ -3,6 +3,10 @@
 ===Etymology===
 From {{etyl|la|en}} {{m|la|enumerātus}} < {{m|la|enumerō}}.
 
+===Pronunciation===
+* {{a|RP}} {{IPA|/ɪˈnjuː.məˌɹeɪt/|lang=en}}
+* {{a|GA}} {{IPA|/ɪˈn(j)u.məˌɹeɪt/|lang=en}}
+
 ===Verb===
 {{en-verb|enumerat}}
 
