/* English */ Applied {{was wotd}} and {{pedia}}; added image and related terms; updated etymology; minor copyediting <dame#49005700>

--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -1,44 +1,43 @@
 {{also|Dame|damé|dáme|Damɛ}}
 ==English==
-{{wikipedia|Dame}}
+{{was wotd|2018|December|9}}
 
 ===Etymology===
-From {{inh|en|enm|dame}}, {{m|enm|dam}}, from {{der|en|fro|dame}}, from {{der|en|la|domina}}.
+[[File:Judi Dench at the BAFTAs 2007.jpg|thumb|English actress Dame {{w|Judi Dench}} at the {{w|60th British Academy Film Awards}} in February 2007. Dench was appointed Dame Commander of the {{w|Order of the British Empire}} in 1988, and thus uses the title “Dame” ''(sense 1)'']]
+
+From {{inh|en|enm|dame}}, {{m|enm|dam||(term of address or title of a) woman of rank, lady; mistress of a household; superior of a convent; mother}}, from {{der|en|fro|dame||lady; term of address for a woman; the queen in card games and chess}}, from {{der|en|la|domina||mistress of the house}},<ref>{{R:MED Online|entry=dāme, n.|id=MED10521|accessdate=16 February 2018}}</ref> {{glossary|feminine}} form of {{m|la|dominus||lord, master, ruler; owner of a residence}}, ultimately either from {{der|en|ine-pro|*demh₂-||to domesticate, tame}} or from {{der|en|la|domus||home, house}} (ultimately from {{der|en|ine-pro|*dem-||to build (up)}}).
 
 ===Pronunciation===
-* {{a|UK}} {{IPA|/deɪm/|lang=en}}
+* {{a|RP|GA}} {{IPA|/deɪm/|lang=en}}
 * {{rhymes|eɪm|lang=en}}
 
 ===Noun===
 {{en-noun}}
 
-# {{lb|en|British}} The {{l|en|equivalent}} title to {{l|en|Sir}} for a female {{l|en|knight}}.
-#: '''''Dame''' Edith Sitwell''
-# {{lb|en|dated|informal|slightly|derogatory|US}} A woman.
+# {{lb|en|Britain}} ''Usually capitalized as'' '''{{m|en|Dame}}''': a [[title#Noun|title]] [[equivalent]] to [[Sir]] for a [[female#Adjective|female]] [[knight#Noun|knight]].
+#: {{ux|en|'''Dame''' Edith Sitwell}}
+# {{lb|en|Britain}} A [[matron]] at {{w|Eton College}}.
+# {{lb|en|Britain|theatre}} In [[traditional]] [[pantomime]]: a [[melodramatic]] [[female#Noun|female]] often [[play#Verb|played]] by a [[man#Noun|man]] in [[drag#Noun|drag]].
+# {{lb|en|US|dated|informal|slightly|derogatory}} A [[woman]].
 #* '''1903''', [[Wikipedia:Guy_Wetmore_Carryl|Guy Wetmore Carryl]], ''The Lieutenant-Governor'', Houghton, Mifflin and Company, page 37:
 #*: "I can see that would be the kind of a chap that the '''dames''' would stand for everlastingly."
 #* '''1949''', {{w|Oscar Hammerstein II}}, "{{w|There is Nothing Like a Dame}}", ''[[w:South Pacific (musical)|South Pacific]]''
 #*: There ain't nothin' like a '''dame'''! / Nothin' in the world! / There is nothin' you can name / That is anythin' like a '''dame'''!
-# A [[traditional]] [[character]] in [[British]] [[pantomime]], a [[melodramatic]] [[female]] often played by a man in [[drag]].
-# {{lb|en|archaic}} {{l|en|lady|Lady}}, woman.
-# {{lb|en|UK}} A [[matron]] at {{w|Eton College}}.
+# {{lb|en|archaic}} A [[lady]], a woman.
 
 ====Synonyms====
-* See also [[Thesaurus:woman]]
+* ''See'' [[Thesaurus:woman]]
+
+====Derived terms====
+* {{l|en|dame school}}
+* {{l|en|damehood}}
+* {{l|en|damely}}
 
 ====Related terms====
 * {{l|en|grande dame}}
 
 ====Translations====
-{{trans-top|archaic: lady, woman}}
-* Portuguese: {{t+|pt|dama|f}}
-* Russian: {{t+|ru|да́ма|f}}, {{t+|ru|госпожа́|f}}, {{t+|ru|суда́рыня|f}}
-{{trans-mid}}
-* Scottish Gaelic: {{t+|gd|baintighearna|f}}
-* Serbo-Croatian: {{t+|sh|dama|f}}, {{t+|sh|gospa}}
-{{trans-bottom}}
-
-{{trans-top|equivalent title to Sir for a female knight}}
+{{trans-top|title equivalent to Sir for a female knight}}
 * Maori: {{t|mi|kahurangi}}
 * Portuguese: {{t+|pt|dama|f}}
 * Romanian: {{t+|ro|doamnă|f}}
@@ -47,10 +46,18 @@ From {{inh|en|enm|dame}}, {{m|enm|dam}}, from {{der|en|fro|dame}}, from {{der|en
 * Serbo-Croatian: {{t+|sh|dama}}
 {{trans-bottom}}
 
-{{trans-top|slightly derogatory way of referring to a woman}}
+{{trans-top|(''US, dated, informal, slightly derogatory'') a woman}}
 * Finnish: {{t+|fi|daami}}
 {{trans-mid}}
 * Russian: {{t+|ru|да́мочка|f}}, {{t+|ru|бабёнка|f}} {{qualifier|derogatory}}, {{t+|ru|ба́ба|f}} {{qualifier|derogatory}}, {{t+|ru|тётка|f}}
+{{trans-bottom}}
+
+{{trans-top|(''archaic'') lady, woman}}
+* Portuguese: {{t+|pt|dama|f}}
+* Russian: {{t+|ru|да́ма|f}}, {{t+|ru|госпожа́|f}}, {{t+|ru|суда́рыня|f}}
+{{trans-mid}}
+* Scottish Gaelic: {{t+|gd|baintighearna|f}}
+* Serbo-Croatian: {{t+|sh|dama|f}}, {{t+|sh|gospa}}
 {{trans-bottom}}
 
 ====See also====
@@ -59,7 +66,12 @@ From {{inh|en|enm|dame}}, {{m|enm|dam}}, from {{der|en|fro|dame}}, from {{der|en
 * {{l|en|madame}}
 * {{l|en|sir}}
 
-[[Category:Regional English]]
+===References==
+<references />
+
+===Further reading===
+* {{pedia|dame|dame (title)}}
+* {{pedia|dame (disambiguation)}}
 
 ===Anagrams===
 * {{anagrams|en|ADME|Edam|MEDA|Mead|made|mead}}
