--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -66,7 +66,7 @@ From {{inh|en|enm|dame}}, {{m|enm|dam||(term of address or title of a) woman of 
 * {{l|en|madame}}
 * {{l|en|sir}}
 
-===References==
+===References===
 <references />
 
 ===Further reading===
