--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -19,10 +19,8 @@ From {{inh|en|enm|dame}}, {{m|enm|dam||(term of address or title of a) woman of 
 # {{lb|en|Britain}} A [[matron]] at {{w|Eton College}}.
 # {{lb|en|Britain|theater}} In [[traditional]] [[pantomime]]: a [[melodramatic]] [[female#Noun|female]] often [[play#Verb|played]] by a [[man#Noun|man]] in [[drag#Noun|drag]].
 # {{lb|en|US|dated|informal|slightly|derogatory}} A [[woman]].
-#* '''1903''', [[Wikipedia:Guy_Wetmore_Carryl|Guy Wetmore Carryl]], ''The Lieutenant-Governor'', Houghton, Mifflin and Company, page 37:
-#*: "I can see that would be the kind of a chap that the '''dames''' would stand for everlastingly."
-#* '''1949''', {{w|Oscar Hammerstein II}}, "{{w|There is Nothing Like a Dame}}", ''[[w:South Pacific (musical)|South Pacific]]''
-#*: There ain't nothin' like a '''dame'''! / Nothin' in the world! / There is nothin' you can name / That is anythin' like a '''dame'''!
+#* {{quote-book|author=Guy Wetmore Carryl|authorlink=Guy Wetmore Carryl|chapter=|title=The Lieutenant-Governor: A Novel|location=Boston, Mass.; New York, N.Y.|publisher=[[w:Houghton Mifflin Harcourt|Houghton, Mifflin and Company]]; [[w:Riverside Publishing|Riverside Press]], Cambridge [Mass.]|month=March|year=1903|page=37|pageurl=https://archive.org/stream/lieutenantgovern00carriala#page/37/mode/1up|oclc=2223403|passage=I can see that would be the kind of a chap that the '''dames''' would stand for everlastingly.}}
+#* {{quote-book|author={{w|Oscar Hammerstein II}} (lyrics), {{w|Richard Rodgers}} (music)|chapter={{w|There Is Nothing Like a Dame}}|title=[[w:South Pacific (musical)|South Pacific]]|year=1949|newversion=published in|2ndauthor=Oscar Hammerstein II (lyrics); Oscar Hammerstein II and Joshua Logan (book)|editor2=Albert Sirmay|title2=South Pacific. A Musical Play. [...] Adapted from {{w|James A. Michener}}’s [...] {{w|Tales of the South Pacific}} [...]|location2=New York, N.Y.|publisher2=Williamson Music; Milwaukee, Wis.: [[w:Hal Leonard Corporation|Hal Leonard]]|page2=30|oclc2=497235024|passage=There is nothin' like a '''dame''' / Nothin' in the world. / There is nothin' you can name / That is anythin' like a '''dame'''.}}
 # {{lb|en|archaic}} A [[lady]], a woman.
 
 ====Synonyms====
