--- a/en/f/four score and seven years ago.803552.wikitext
+++ b/en/f/four score and seven years ago.803552.wikitext
@@ -7,4 +7,4 @@ In Abraham Lincoln's Gettysburg Address, he used this (at the time) widely known
 ===Adverb===
 {{head|en|adverb}}
 
-# {{lb|en|idiomatic}} As an [[opener]], a sometimes sarcastic [[indicator]] to indicate a past event being mentioned is particularly important.
+# {{lb|en|idiomatic}} As an [[opener]], a sometimes sarcastic [[indicator]] to indicate a past event being mentioned is particularly unimportant.
