--- a/en/p/Pahari.741411.wikitext
+++ b/en/p/Pahari.741411.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|hi|en}}.
+From {{bor|en|hi|पहाड़ी}}.
 
 ===Pronunciation===
 * {{IPA|/pəˈhɑːɹi/|lang=en}}
