--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -66,7 +66,7 @@ Earlier {{m|en|seise}}, from {{etyl|enm|en}} {{m|enm|seisen}}, {{m|enm|sesen}}, 
 * French: {{t+|fr|saisir}}, {{t+|fr|saisir|alt=se saisir de}}
 * German: {{t+|de|ergreifen}}, {{t+|de|fassen}}, {{t+|de|greifen}}
 * Greek:
-*: Ancient: {{t|grc|συλλαμβάνω|tr=syllambanō}}
+*: Ancient: {{t|grc|συλλαμβάνω}}
 * Hungarian: {{t+|hu|megfog}}, {{t+|hu|megragad}}
 * Italian: {{t+|it|prendere}}, {{t+|it|afferrare}}
 * Japanese: {{t|ja|捉える|tr=とらえる, toraeru}}, {{t+|ja|つかむ|tr=tsukamu}}
