--- a/en/s/she-goat.802749.wikitext
+++ b/en/s/she-goat.802749.wikitext
@@ -20,13 +20,13 @@
 * French: {{t+|fr|chèvre|f}}
 * German: {{t+|de|Ziege|f}}, {{t+|de|Geiß|f}}, {{t+|de|Zicke|f}}, {{t|de|Zibbe|f}}
 * Gothic: {{t|got|𐌲𐌰𐌹𐍄𐍃|f|tr=gaíts}}
-* Greek: {{t+|el|αίγα|f|tr=éga}}
+* Greek: {{t+|el|αίγα|f}}
 *: Ancient: {{t|grc|αἴξ|f}}
 {{trans-mid}}
 * Hebrew: {{t+|he|עז|tr=éz|f}}
 * Low German: {{t|nds|Zeeg|f}}, {{t|nds|Zääg|f}}, {{t|nds|Seeg|f}}, {{t|nds|Sääg|f}}
 * Macedonian: {{t|mk|коза|f|tr=koza}}
-* Old Church Slavonic: {{t|cu|коза|f|tr=koza|sc=Cyrl}}
+* Old Church Slavonic: {{t|cu|коза|f}}
 * Pali: {{t|pi|ajā|f}}
 * Polish: {{t+|pl|koza|f}}
 * Russian: {{t+|ru|коза́|f}}
