/* Norwegian Nynorsk */ derived terms <bind#49012393>

--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -345,6 +345,7 @@ From the verb {{m|nn|binde}}
 
 ====Derived terms====
 * {{l|nn|armbind}}
+* {{l|nn|supplementsbind}}
 
 ===References===
 * {{R:The Nynorsk Dictionary}}
