--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -8,7 +8,7 @@
 
 ===Etymology===
 {{PIE root|en|bʰendʰ}}
-From {{etyl|enm|en}} {{m|enm|binden}}, from {{etyl|ang|en}} {{m|en|bindan}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*bindaną}} (compare West Frisian {{m|fy|bine}}, Dutch {{m|nl|binden}}, Low German {{m|nds|binnen}}, German {{m|de|binden}}, Danish {{m|da|binde}}), from {{etyl|ine-pro|en}} {{m|ine-pro|*bʰendʰ-||to tie}} (compare Welsh {{m|cy|benn||cart}}, Latin {{m|la|offendīx||knot, band}}, Lithuanian {{m|lt|beñdras||partner}}, Albanian {{m|sq|bend||servant, henchman}}, Ancient Greek {{m|grc|πεῖσμα||cable, rope}}, Sanskrit {{m|sa|बध्नाति}}).
+From {{der|en|enm|binden}}, from {{der|en|en|bindan}}, from {{der|en|gem-pro|*bindaną}} (compare {{cog|fy|bine}}, {{cog|nl|binden}}, {{cog|nds|binnen}}, {{cog|de|binden}}, {{cog|da|binde}}), from {{der|en|ine-pro|*bʰendʰ-||to tie}} (compare {{cog|cy|benn||cart}}, {{cog|la|offendīx||knot, band}}, {{cog|lt|beñdras||partner}}, {{cog|sq|bend||servant, henchman}}, {{cog|grc|πεῖσμα||cable, rope}}, {{cog|sa|बध्नाति}}).
 
 ===Verb===
 {{en-verb|binds|binding|bound|bound|past_ptc2=bounden|past_ptc2_qual=rare}}
