/* Albanian */ cleanup <bind#49012424>

--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -242,7 +242,7 @@ From {{der|en|enm|binden}}, from {{der|en|en|bindan}}, from {{der|en|gem-pro|*bi
 ==Albanian==
 
 ===Etymology===
-From {{etyl|sqj-pro|sq}} {{m|sqj-pro|*bind-}}, from {{etyl|ine-pro|sq}} {{m|ine-pro|*bʰeydʰ-}} 'to persuade, encourage; constrain'. Cognate to Ancient Greek {{m|grc|πείθω||to persuade, convince}}<ref> Albanische Etymologien (Untersuchungen zum albanischen Erbwortschatz), Bardhyl Demiraj, Leiden Studies in Indo-European 7; Amsterdam - Atlanta 1997, p.101</ref>, Illyrian {{m|xil|*Bindus||Illyrian Neptune}} and Thracian {{m|xth|Bithus||theonym}}.
+From {{der|sq|sqj-pro|*bind-}}, from {{der|sq|ine-pro|*bʰeydʰ-}} 'to persuade, encourage; constrain'. Cognate to {{cog|grc|πείθω||to persuade, convince}}<ref> Albanische Etymologien (Untersuchungen zum albanischen Erbwortschatz), Bardhyl Demiraj, Leiden Studies in Indo-European 7; Amsterdam - Atlanta 1997, p.101</ref>, Illyrian {{m|xil|*Bindus||Illyrian Neptune}} and Thracian {{m|xth|Bithus||theonym}}.
 
 ===Verb===
 {{sq-verb|binda|bindur}}
