/* Noun */ <sea star#49013425>

--- a/en/s/sea star.776092.wikitext
+++ b/en/s/sea star.776092.wikitext
@@ -9,6 +9,11 @@
 
 # A [[starfish]].
 
+====Translations====
+{{trans-top|starfish}}
+{{trans-mid}}
+{{trans-bottom}}
+
 ====Synonyms====
 * {{l|en|starfish}}
 * {{l|en|asteroid}}
