--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -5,7 +5,7 @@
 ===Etymology===
 [[File:Judi Dench at the BAFTAs 2007.jpg|thumb|English actress Dame {{w|Judi Dench}} at the {{w|60th British Academy Film Awards}} in February 2007. Dench was appointed Dame Commander of the {{w|Order of the British Empire}} in 1988, and thus uses the title “Dame” ''(sense 1)'']]
 
-From {{inh|en|enm|dame}}, {{m|enm|dam||(term of address or title of a) woman of rank, lady; mistress of a household; superior of a convent; mother}}, from {{der|en|fro|dame||lady; term of address for a woman; the queen in card games and chess}}, from {{der|en|la|domina||mistress of the house}},<ref>{{R:MED Online|entry=dāme, n.|id=MED10521|accessdate=16 February 2018}}</ref> {{glossary|feminine}} form of {{m|la|dominus||lord, master, ruler; owner of a residence}}, ultimately either from {{der|en|ine-pro|*demh₂-||to domesticate, tame}} or from {{der|en|la|domus||home, house}} (ultimately from {{der|en|ine-pro|*dem-||to build (up)}}).
+From {{inh|en|enm|dame}}, {{m|enm|dam||(term of address or title of a) woman of rank, lady; mistress of a household; superior of a convent; mother}}, from {{der|en|fro|dame||lady; term of address for a woman; the queen in card games and chess}}, from {{der|en|la|domina||mistress of the house}},<ref>{{R:MED Online|entry=dāme, n.|id=MED10521|accessdate=16 February 2018}}</ref> {{glossary|feminine}} form of {{m|la|dominus||lord, master, ruler; owner of a residence}}, ultimately either from {{der|en|ine-pro|*demh₂-||to domesticate, tame}} or from {{der|en|la|domus||home, house}} (ultimately from {{der|en|ine-pro|*dem-||to build (up)}}). {{doublet|donna|lang=en}}.
 
 ===Pronunciation===
 * {{a|RP|GA}} {{IPA|/deɪm/|lang=en}}
