t+hy:[[բազմացում]] ([[WT:EDIT|Assisted]]) <multiplication#49015020>

--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -109,6 +109,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 * Ukrainian: {{t|uk|мно́ження|n|sc=Cyrl}}
 {{trans-bottom}}
 {{trans-top|increasing in number}}
+* Armenian: {{t+|hy|բազմացում}}
 * Chinese: 
 *: Mandarin: {{t-needed|cmn}}
 {{trans-mid}}
