--- a/en/s/squirt gun.855129.wikitext
+++ b/en/s/squirt gun.855129.wikitext
@@ -17,5 +17,5 @@
 * Danish: {{t+|da|vandpistol|c}}
 {{trans-mid}}
 * French: {{t+|fr|pistolet à eau|m}}
-* Galician: {{t|gl|sucho}}, {{t|gl|cichote|m}}
+* Galician: {{t|gl|sucho}}, {{t|gl|cichote|m}}, {{t|gl|xiringa|f}}
 {{trans-bottom}}
