/* Verb */ edited using [[wikt:User:Dixtosa/AjaxEdit.js|AjaxEdit]] <make a killing#49016473>

--- a/en/m/make a killing.742288.wikitext
+++ b/en/m/make a killing.742288.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Verb===
-{{head|en|verb}}
+{{en-verb|makes a killing|making a killing|made a killing}}
 
 # {{lb|en|idiomatic}} To [[win]] or [[earn]] a large amount of [[money]].
 #* '''1913''', [[w:Rex Ellingwood Beach|Rex Ellingwood Beach]], ''The Iron Trail: An Alaskan Romance'', ch. 5:
