--- a/en/l/limu.801596.wikitext
+++ b/en/l/limu.801596.wikitext
@@ -43,7 +43,7 @@ Borrowed from {{bor|en|haw|limu}}, from {{der|en|poz-pep-pro|*rimu}}, from {{der
 ==Hawaiian==
 
 ===Etymology===
-From {{der|haw|poz-pep-pro|*rimu}}, from {{der|haw|poz-pnp-pro|*rimu}}, from {{inh|haw|poz-pol-pro|*rimu}}, from {{inh|haw|poz-oce-pro|*limut}}, from {{inh|haw|pqe-pro|*limut}}, from {{der|haw|poz-cet-pro|*limut}}, from {{inh|haw|poz-pro|*limut}}.
+From {{inh|haw|poz-pep-pro|*rimu}}, from {{inh|haw|poz-pnp-pro|*rimu}}, from {{inh|haw|poz-pol-pro|*rimu}}, from {{inh|haw|poz-oce-pro|*limut}}, from {{inh|haw|pqe-pro|*limut}}, from {{inh|haw|poz-cet-pro|*limut}}, from {{inh|haw|poz-pro|*limut}}.
 
 ===Noun===
 {{head|haw|noun}}
@@ -67,6 +67,6 @@ From {{inh|sky|poz-pol-pro|*rimu}}.
 ==Tboli==
 
 ===Numeral===
-{{head|tbl|numeral}}
+{{head|tbl|numeral|cat2=cardinal numbers}}
 
-# {{lb|tbl|cardinal}} {{l|en|five}}
+# [[five]]
