--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -328,6 +328,7 @@ From {{etyl|enm|en}} {{m|enm|then|then(ne)}}, {{m|enm|than|than(ne)}}, from {{et
 *: Bokmål: {{t|nb|daværende}}
 *: Nynorsk: {{t|nn|dåværande}}
 * Portuguese: {{t|pt|de então}}
+* Russian: {{t+|ru|тогда́шний}}
 * Spanish: {{t+|es|de entonces}}
 * Swedish: {{t+|sv|dåvarande}}
 {{trans-bottom}}
