--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -3,7 +3,7 @@
 [[File:Pea Whistle.jpg|thumb|A whistle (1)]]
 
 ===Etymology===
-From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||to whistle}}, from {{inh|en|gem-pro|*hwistlōną||to make a hissing sound}}, {{m|ru|свистеть||to whistle}}. Cognate with {{cog|is|hvísla|t=to whisper}}.
+From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||to whistle}}, from {{inh|en|gem-pro|*hwistlōną||to make a hissing sound}}. Cognate with {{cog|is|hvísla|t=to whisper}}, {{cog|ru|свистеть|t=to whistle}}.
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/wɪsl̩/|lang=en}}, {{IPA|/ʍɪsl̩/|lang=en}}
