--- a/en/m/Maneblusser.4388.wikitext
+++ b/en/m/Maneblusser.4388.wikitext
@@ -1,7 +1,7 @@
 ==Dutch==
 
 ===Etymology===
-From {{compound|nl|maan|t1=moon|blusser|t2=extinguisher}}, after an incident where the moon shining through fog was mistaken for a tower on fire. [http://www.trabel.com/mechelen-intro.htm]
+From {{af|nl|maan|t1=moon|-s-|blusser|t3=extinguisher}}, after an incident where the moon shining through fog was mistaken for a tower on fire. [http://www.trabel.com/mechelen-intro.htm]
 
 ===Pronunciation===
 * {{hyphenation|Ma|ne|blus|ser|lang=nl}}
