/* Pronunciation */ edited using [[wikt:User:Dixtosa/AjaxEdit.js|AjaxEdit]] <sir#49032831>

--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -9,7 +9,7 @@ From {{inh|en|enm|sir}}, borrowed from {{bor|en|fro|sire||master, sir, lord}}, f
 * {{a|RP}} {{IPA|/ˈsɜː(ɹ)/|lang=en}}
 * {{a|GA}} {{enPR|ˈsûr}}, {{IPA|/ˈsɝ/|lang=en}}
 * {{a|Scotland}} {{IPA|/ˈsɪɹ/|lang=en}}
-* {{a|India}} {{IPA|/ˈsə(ɹ)/|lang=en}}
+* {{a|InE}} {{IPA|/ˈsə(ɹ)/|lang=en}}
 * {{audio|en-us-sir.ogg|Audio (US)|lang=en}}
 * {{rhymes|ɜː(ɹ)|lang=en}}
 
