/* Pronunciation */ edited using [[wikt:User:Dixtosa/AjaxEdit.js|AjaxEdit]] <sir#49032832>

--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -8,9 +8,9 @@ From {{inh|en|enm|sir}}, borrowed from {{bor|en|fro|sire||master, sir, lord}}, f
 ===Pronunciation===
 * {{a|RP}} {{IPA|/ˈsɜː(ɹ)/|lang=en}}
 * {{a|GA}} {{enPR|ˈsûr}}, {{IPA|/ˈsɝ/|lang=en}}
+** {{audio|en-us-sir.ogg|Audio (US)|lang=en}}
 * {{a|Scotland}} {{IPA|/ˈsɪɹ/|lang=en}}
 * {{a|InE}} {{IPA|/ˈsə(ɹ)/|lang=en}}
-* {{audio|en-us-sir.ogg|Audio (US)|lang=en}}
 * {{rhymes|ɜː(ɹ)|lang=en}}
 
 ===Noun===
