--- a/en/h/hances.746839.wikitext
+++ b/en/h/hances.746839.wikitext
@@ -20,7 +20,7 @@
 ===Pronunciation===
 * {{a|cy-N}} {{a|standard}} {{a|colloquial}} {{IPA|/ˈhankɛs/|lang=cy}}
 ** {{a|cy-N}} {{a|colloquial}} {{IPA|/ˈhankas/|lang=cy}}
-* {{a|cy-S}} {{IPA|/ˈhaːlɛn/|/ˈhankɛs/|lang=cy}}
+* {{a|cy-S}} {{IPA|/ˈhankɛs/|lang=cy}}
 
 ===Noun===
 {{cy-noun|f|hancesi}}
