/* English */ improve def; translations <sailing vessel#49039824>

--- a/en/s/sailing vessel.776059.wikitext
+++ b/en/s/sailing vessel.776059.wikitext
@@ -3,6 +3,14 @@
 
 ===Noun===
 {{en-noun}}
-# A [[sailboat]] or [[sailing ship]].
+# {{lb|en|watercraft}} A [[boat]] or [[ship]] powered by [[wind]] in its [[sail]]s; a [[sailboat]] or [[sailing ship]].
 # An [[ice yacht]].
 # A [[land yacht]].
+
+====Translations====
+{{trans-top|(usually) a sailing ship}}
+* Norwegian:
+*: Bokmål: {{t|nb|seilfartøy|n}}
+*: Nynorsk: {{t|nn|seglfartøy|n}}
+{{trans-mid}}
+{{trans-bottom}}
