--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -73,7 +73,7 @@ From {{m|en|bend}}.
 * Romanian: {{t+|ro|gârbov}}, {{t+|ro|îndoit}}
 * Russian: {{t+|ru|со́гнутый}}, {{t+|ru|изо́гнутый}}, {{t+|ru|гну́тый}}, {{t+|ru|криво́й}}, {{t+|ru|искривлённый}}
 * Scottish Gaelic: {{t|gd|lùbach}}
-* Spanish: {{t+|es|plegado}}
+* Spanish: {{t+|es|doblado}}
 * Sundanese: {{t|su|ᮘᮤᮀᮊᮨᮀ}}
 * Swedish: {{t+|sv|böjd}}
 * Thai: {{t-needed|th}}
