--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -73,6 +73,7 @@ From earlier {{m|en|gamel}}, from {{inh|en|enm|*gamlen}}, {{m|enm|*gamelen}}, va
 
 ====Translations====
 {{trans-top|to take a risk, with the potential of a positive outcome}}
+* Arabic: {{t|ar|قَامَرَ|pf}}, {{t|ar|يُقَامِرُ|impf}}
 * Bulgarian: {{t+|bg|рискувам|sc=Cyrl}}
 * Chinese:
 *: Mandarin: {{t+|cmn|賭博|sc=Hani}}, {{t+|cmn|赌博|tr=dǔbó|sc=Hani}}, {{t+|cmn|賭錢|sc=Hani}}, {{t+|cmn|赌钱|tr=dǔqián|sc=Hani}}
@@ -99,7 +100,7 @@ From earlier {{m|en|gamel}}, from {{inh|en|enm|*gamlen}}, {{m|enm|*gamelen}}, va
 {{trans-bottom}}
 
 {{trans-top|to play risky games for monetary gain}}
-* Arabic: {{t|ar|قِمَار|m|f}}
+* Arabic: {{t|ar|قِمَار|m|f}}, {{t|ar|قَامَرَ|pf}}, {{t|ar|يُقَامِرُ|impf}}
 *: Hijazi Arabic: {{t|acw|قُمار|m|tr=gumār|sc=Arab}}
 * Bulgarian: {{t|bg|играя комар|sc=Cyrl}}
 * Chinese:
