--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -100,8 +100,7 @@ From earlier {{m|en|gamel}}, from {{inh|en|enm|*gamlen}}, {{m|enm|*gamelen}}, va
 {{trans-bottom}}
 
 {{trans-top|to play risky games for monetary gain}}
-* Arabic: {{t|ar|قِمَار|m|f}}, {{t|ar|قَامَرَ|pf}}, {{t|ar|يُقَامِرُ|impf}}
-*: Hijazi Arabic: {{t|acw|قُمار|m|tr=gumār|sc=Arab}}
+* Arabic: {{t|ar|قَامَرَ|pf}}, {{t|ar|يُقَامِرُ|impf}}
 * Bulgarian: {{t|bg|играя комар|sc=Cyrl}}
 * Chinese:
 *: Cantonese: {{t|yue|賭錢|sc=Hani}}, {{t|yue|赌钱|tr=dou2 cin4-2|sc=Hani}}
