--- a/en/g/grognard.855664.wikitext
+++ b/en/g/grognard.855664.wikitext
@@ -4,7 +4,7 @@
 From the {{etyl|fr|en}} {{m|fr|grognard||grumbler}}.
 
 ===Pronunciation===
-* {{IPA|/ɡɹɔnjaɹ/|lang=en}}
+* {{IPA|/ɡɹɔnjɑɹ/|/ˈgɹoʊn.jɑɹd/|/ˈgɹɑg.nɑɹd/|lang=en}}
 
 ===Noun===
 {{en-noun}}
