--- a/en/g/grognard.855664.wikitext
+++ b/en/g/grognard.855664.wikitext
@@ -41,6 +41,9 @@ From {{m|fr|grogner||snarl, grunt, growl, grumble}} {{suffix||ard|lang=fr}}.
 # a [[grumbler]]; one who [[grumble]]s
 # an old [[veteran]] soldier, specifically an old [[grenadier]] of the Imperial Guard (''Grenadiers à pied de la Garde Impériale''); an old [[complaining]] soldier
 
+====See also====
+* {{l|fr|grognon}}
+
 ====References====
 * ''[http://www.napoleonguide.com/glossary.htm Napoleonic Glossary]''
 
