--- a/en/g/grognard.855664.wikitext
+++ b/en/g/grognard.855664.wikitext
@@ -1,10 +1,10 @@
 ==English==
 
 ===Etymology===
-From the {{etyl|fr|en}} {{m|fr|grognard||grumbler}}.
+From {{bor|en|fr|grognard||grumbler}}.
 
 ===Pronunciation===
-* {{IPA|/ɡɹɔnjɑɹ/|/ˈgɹoʊn.jɑɹd/|/ˈgɹɑg.nɑɹd/|lang=en}}
+* {{IPA|/ˈɡɹɔnjɑɹ/|/ˈɡɹoʊn.jɑɹd/|/ˈɡɹɑɡ.nɑɹd/|lang=en}}
 
 ===Noun===
 {{en-noun}}
@@ -33,7 +33,7 @@ From the {{etyl|fr|en}} {{m|fr|grognard||grumbler}}.
 From {{m|fr|grogner||snarl, grunt, growl, grumble}} {{suffix||ard|lang=fr}}.
 
 ===Pronunciation===
-* {{IPA|/ɡʁɔ.ɲaʁ/|lang=fr}}
+* {{fr-IPA}}
 
 ===Noun===
 {{fr-noun|m}}
