--- a/en/n/nove.26046.wikitext
+++ b/en/n/nove.26046.wikitext
@@ -34,7 +34,7 @@
 From {{inh|gl|roa-opt|nove}}, from {{inh|gl|la|novem}}, from {{inh|gl|ine-pro|*h₁néwn̥}}.
 
 ===Pronunciation===
-* {{IPA|[ˈnɔbe]|lang=gl}}
+* {{IPA|[ˈnɔβe]|lang=gl}}
 * {{audio|Gl-nove.ogg|Audio|lang=gl}}
 
 ===Numeral===
