--- a/en/p/PVC.4323.wikitext
+++ b/en/p/PVC.4323.wikitext
@@ -2,12 +2,12 @@
 {{wikipedia|PVC (disambiguation)}}
 
 ===Noun===
-{{en-noun|-}}
+{{en-noun|~}}
 
-# {{lb|en|organic compound}} [[polyvinyl chloride|'''p'''oly'''v'''inyl '''c'''hloride]]
-# {{lb|en|medicine}} [[premature ventricular contraction|'''p'''remature '''v'''entricular '''c'''ontraction]] of the heart
-# {{lb|en|medicine}} [[peripheral venous catheter|'''p'''eripheral '''v'''enous '''c'''atheter]]
-# {{lb|en|networking}} '''p'''ermanent [[virtual circuit|'''v'''irtual '''c'''ircuit]]
+# {{lb|en|organic compound}} {{initialism of|polyvinyl chloride|lang=en}}
+# {{lb|en|medicine}} {{initialism of|premature ventricular contraction|lang=en}}
+# {{lb|en|medicine}} {{initialism of|peripheral venous catheter|lang=en}}
+# {{lb|en|networking}} {{initialism of|[[permanent]] [[virtual circuit]]|lang=en}}
 
 ====Translations====
 {{trans-see|(organic compound) polyvinyl chloride|polyvinyl chloride}}
