--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -174,7 +174,7 @@ Cognate with Scots {{m|sco|wecht}}, {{m|sco|weicht||weight}}, Saterland Frisian 
 * Uzbek: {{t+|uz|ogʻirlik}}, {{t+|uz|vazn}}
 * Venetian: {{t|vec|pexo|m}}
 * Vietnamese: {{t+|vi|trọng lượng}} ({{t|vi|重量}}), {{t|vi|cân nặng}}
-* Welsh: {{t-needed|cy}}
+* Welsh: {{t+|cy|pwysau|m-p}}
 * Yiddish: {{t|yi|געוויכט|n|sc=Hebr}}
 {{trans-bottom}}
 
