--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -23,7 +23,7 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 * Arabic: {{t|ar|رِهَان|m}}, {{t|ar|مُرَاهَنَة|f}}
 * Basque: {{t|eu|trabes}}
 * Bulgarian: {{t+|bg|бас}}, {{t+|bg|облог|m}}
-* Catalan: {{t+|ca|aposta|f}}
+* Catalan: {{t+|ca|aposta|f}}, {{t|ca|juguesca|f}}
 * Czech: {{t+|cs|sázka|f}}
 * Danish: {{t|da|væddemål|n}}
 * Dutch: {{t+|nl|weddenschap|f}}
