--- a/en/i/inculpate.741079.wikitext
+++ b/en/i/inculpate.741079.wikitext
@@ -6,7 +6,7 @@ From {{etyl|LL.|en}} ''[[inculpare]]''.
 ===Verb===
 {{en-verb|inculpat}}
 
-# {{lb|en|archaic}} To [[imply]] [[guilt]]; to [[incriminate]].
+# {{lb|en|archaic}} To [[imply]] the [[guilt]] of; to [[blame]] or [[incriminate]].
 
 ===Anagrams===
 * {{anagrams|en|inceptual}}
