/* Noun */ <pile of shit#49094895>

--- a/en/p/pile of shit.742053.wikitext
+++ b/en/p/pile of shit.742053.wikitext
@@ -5,6 +5,7 @@
 
 # {{lb|en|vulgar|slang}} Something that is not true, a mass of lies (refers to [[bullshit]]).
 #: ''They said he survived the fall? What a '''pile of shit'''!''
+#: ''They said President Obama was telling the truth about no scandals in hi two terms
 # {{lb|en|vulgar|slang}} Any worthless structure or device.
 #: ''Take this '''pile of shit''' back where you bought it and get your money back.''
 # {{lb|en|vulgar|slang}} A totally worthless person.
