--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -632,3 +632,4 @@ From {{etyl|enm|en}} {{m|enm|blowen}}, from {{etyl|ang|en}} {{m|ang|blāwan||to 
 [[Category:English class 7 strong verbs]]
 [[Category:English irregular verbs]]
 [[Category:en:Colors]]
+[[Category:en:Singing]]
