added [[Category:en:Recreational drugs]] using [[Help:Gadget-HotCat|HotCat]] <blow#49098372>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -634,3 +634,4 @@ From {{etyl|enm|en}} {{m|enm|blowen}}, from {{etyl|ang|en}} {{m|ang|blāwan||to 
 [[Category:en:Colors]]
 [[Category:en:Singing]]
 [[Category:en:Wind]]
+[[Category:en:Recreational drugs]]
