--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -635,3 +635,4 @@ From {{etyl|enm|en}} {{m|enm|blowen}}, from {{etyl|ang|en}} {{m|ang|blāwan||to 
 [[Category:en:Singing]]
 [[Category:en:Wind]]
 [[Category:en:Recreational drugs]]
+[[Category:en:Marijuana]]
