t+fa:[[{{t-needed}}]] t+ar:[[{{t-needed}}]] ([[WT:EDIT|Assisted]]) <marmot#49098414>

--- a/en/m/marmot.8229.wikitext
+++ b/en/m/marmot.8229.wikitext
@@ -38,6 +38,7 @@ From {{etyl|frm|en}} ''marmote'', from {{etyl|fro|en}} ''marmotaine, marmontaine
 ====Translations====
 {{trans-top|rodent of the genera Marmota}}
 * Albanian: {{t|sq|marmota}}
+* Arabic: {{t-needed|ar}}
 * Armenian: {{t|hy|արջամուկ}}
 * Basque: {{t+|eu|marmota}}
 * Belarusian: {{t|be|суро́к}}
@@ -77,6 +78,7 @@ From {{etyl|frm|en}} ''marmote'', from {{etyl|fro|en}} ''marmotaine, marmontaine
 * Navajo: {{t|nv|dilchaʼ}}
 * Norwegian: {{t|no|murmeldyr}}
 * Occitan: {{t|oc|marmòta}}, {{t|oc|muret}}
+* Persian: {{t-needed|fa}}
 * Polish: {{t+|pl|świstak}}, {{t|pl|świszcz|m}}
 * Portuguese: {{t+|pt|marmota|f}}
 * Romanian: {{t+|ro|marmotă|f}}
