--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -209,6 +209,10 @@ The verb comes from the supposed cunningness of the weasel.
 * {{l|en|polecat}}
 * {{l|en|stoat}}
 
+===References===
+* {{R:OneLook}}
+* {{R:Century 1911}}
+
 ===Anagrams===
 * {{anagrams|en|weales}}
 
