--- a/en/m/malam.4517.wikitext
+++ b/en/m/malam.4517.wikitext
@@ -1,4 +1,16 @@
 {{also|Malam|malām|mālam|maļam}}
+==Acehnese==
+
+===Noun===
+{{head|ace|noun}}
+
+# [[height]]
+
+===References===
+* 2007. [http://archive.phonetics.ucla.edu/ The UCLA Phonetics Lab Archive]. Los Angeles, CA: UCLA Department of Linguistics.
+  
+----
+
 ==Hausa==
 
 ===Etymology===
