--- a/en/e/ECG.26243.wikitext
+++ b/en/e/ECG.26243.wikitext
@@ -1,12 +1,15 @@
 {{also|ecg}}
 ==English==
 
-===Initialism===
-{{rfc-header|Initialism}}
-{{en-initialism}}
+===Noun===
+{{en-noun}}
 
 # {{lb|en|cardiology}} {{initialism of|electrocardiogram|lang=en}}
-# [[East Central German]]
+
+===Proper noun===
+{{en-proper noun}}
+
+# {{initialism of|East Central German|lang=en}}
 
 ===Anagrams===
 * {{anagrams|en|GCE}}
