--- a/en/e/even so.742278.wikitext
+++ b/en/e/even so.742278.wikitext
@@ -33,6 +33,7 @@
 *: Mandarin: {{t|cmn|[[即使]][[這樣]]|sc=Hani}}, {{t|cmn|[[即使]][[这样]]|tr=jíshǐ zhèyàng|sc=Hani}}, {{t|cmn|[[雖然]][[如此]]|sc=Hani}}, {{t|cmn|[[虽然]][[如此]]|tr=suīrán rúcǐ|sc=Hani}}
 * Dutch: {{t+|nl|desondanks}}, {{t|nl|zelfs dan}}, {{t+|nl|toch}}
 * Finnish: {{t|fi|siitä huolimatta}}
+* French: {{t+|fr|quand même}}
 * Greek: {{t|el|εντούτιος}}
 * Hebrew: {{t|he|בְּכָל זֹאת|tr=bekhol zot|sc=Hebr}}
 {{trans-mid}}
