--- a/en/r/real-life.741522.wikitext
+++ b/en/r/real-life.741522.wikitext
@@ -15,6 +15,6 @@
 * Chinese:
 *: Mandarin: {{t-needed|cmn}}
 {{trans-mid}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t|fi|tosielämän}} {{q|genitive of a noun}}
 * Portuguese: {{t-needed|pt}}
 {{trans-bottom}}
