--- a/en/n/NRA.26207.wikitext
+++ b/en/n/NRA.26207.wikitext
@@ -5,6 +5,7 @@
 
 # {{lb|en|US}} {{initialism of|{{w|National Rifle Association}}|lang=en}}
 # {{lb|en|Ireland}} {{initialism of|{{w|National Roads Authority}}|lang=en}}
+# {{lb|en|UK|pensions}} normal retirement age
 
 ===Anagrams===
 * {{anagrams|en|Arn|RAN|RNA|Ran|ran}}
