--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -260,6 +260,7 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 * Georgian: {{t-needed|ka}}
 * German: {{t+|de|pfeifen}}, {{t+|de|flöten}}
 * Greek: {{t+|el|σφυρίζω}}
+* Hindi: {{t+|hi|sītī denā}}
 * Hungarian: {{t+|hu|fütyül}}
 * Ido: {{t+|io|siflar}}
 * Indonesian: {{t+|id|bersiul}}
