--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -410,7 +410,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Basque: {{t+|eu|txakur}}
 * Czech: {{t+|cs|fízl|m}}
 * Dutch: {{t+|nl|flik|m}}, {{t+|nl|smeris|n}}, {{t|nl|wout}}, {{t+|nl|juut}}, {{t+|nl|kit|p}}, {{t+|nl|kankerlijer|m}}, {{t|nl|tiefushoer|f}}, {{t+|nl|hoer|m|f}}
-* French: {{t+|fr|flic|m}}, {{t+|fr|keuf|m}} {{qualifier|verlan}}
+* French: {{t+|fr|poulet|m}}, {{t+|fr|flic|m}}, {{t+|fr|keuf|m}} {{qualifier|verlan}}
 * German: {{t+|de|Bulle|m}}, {{t+|de|Büttel|m}} (obsolescent), {{t|de|Greifer|m}}, {{t|de|Greiferin|f}}, {{t|de|Udel|m}} {{qualifier|regional}}; {{t+|de|Kiberer|m}} {{qualifier|Austria}}, {{t+|de|Kieberer|m}} {{qualifier|Austria}}; {{t|de|Schugger|m}} {{qualifier|Switzerland}}, {{t+|de|Bullenschwein|n}}
 * Greek: {{t+|el|γουρούνι|n}}
 * Icelandic: {{t|is|löggusvín|n}}
