--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -346,7 +346,10 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 
 # {{lb|en|rare}} To express as a thing; to [[reify]].
 
-{{C|en|one-syllable words|autological terms|basic words|placeholder terms}}
+[[Category:English 1-syllable words]]
+[[Category:English autological terms]]
+[[Category:English basic words]]
+[[Category:English placeholder terms]]
 
 ===Anagrams===
 * {{anagrams|en|Night|night}}
