t+mnw:[[ဖေံ]] ([[WT:EDIT|Assisted]]) <otter#49116600>

--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -96,6 +96,7 @@ From {{inh|en|enm|oter}}, {{m|enm|otir}}, {{m|enm|otur}}, {{m|enm|otyre}}, from 
 * Maltese: {{t|mt|lutra}}
 * Manx: {{t|gv|dooarchoo|m}}, {{t|gv|moddey ushtey|m}}
 * Mi'kmaq: {{t|mic|giwnig|an}}
+* Mon: {{t|mnw|ဖေံ}}
 * Navajo: {{t|nv|tábąąstíín}}
 * Norwegian:
 *: Bokmål: {{t+|nb|oter|m}}
