--- a/en/a/aphanitic.776754.wikitext
+++ b/en/a/aphanitic.776754.wikitext
@@ -4,7 +4,7 @@
 {{suffix|aphanite|ic|lang=en}}
 
 ===Pronunciation===
-* {{IPA|æfəˈnɪtɪk|lang=en}}
+* {{IPA|/æfəˈnɪtɪk/|lang=en}}
 * {{rhymes|ɪtɪk|lang=en}}
 
 ===Adjective===
