t+ca:[[divisió]] ([[WT:EDIT|Assisted]]) <division#49126709>

--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -67,6 +67,7 @@ Borrowed from {{bor|en|fro|division}}, from {{der|en|la|divisio|divisio, divisio
 * Aromanian: {{t|rup|mpãrtãciuni|f}}
 * Bashkir: {{t|ba|бүлеү|sc=Cyrl}}
 * Bulgarian: {{t+|bg|делене|n}}, {{t+|bg|разделяне|n}}
+* Catalan: {{t+|ca|divisió|f}}
 * Czech: {{t+|cs|dělení|n}}
 * Dutch: {{t+|nl|deling|f}}, {{t+|nl|verdeling|f}}, {{t+|nl|scheiding|f}}
 * Esperanto: {{t|eo|divido}}, {{t|eo|dividado}}
@@ -137,6 +138,7 @@ Borrowed from {{bor|en|fro|division}}, from {{der|en|la|divisio|divisio, divisio
 * Armenian: {{t+|hy|բաժանում}}
 * Bashkir: {{t|ba|бүлеү|sc=Cyrl}}
 * Bulgarian: {{t+|bg|деление|n}}
+* Catalan: {{t+|ca|divisió|f}}
 * Czech: {{t+|cs|dělení|n}}
 * Dutch: {{t+|nl|deling|f}}, {{t+|nl|delen|n}}
 * Esperanto: {{t|eo|divido}}
@@ -209,6 +211,7 @@ Borrowed from {{bor|en|fro|division}}, from {{der|en|la|divisio|divisio, divisio
 * Afrikaans: {{t|af|afdeling}}, {{t|af|skeiding}}
 * Armenian: {{l|hy|դիվիզիա}}
 * Bulgarian: {{t|bg|дивизия|f}}
+* Catalan: {{t+|ca|divisió|f}}
 * Czech: {{t|cs|divize|f}}
 * Dutch: {{t+|nl|divisie|f}}
 * Esperanto: {{t|eo|divizio}}
@@ -249,6 +252,7 @@ Borrowed from {{bor|en|fro|division}}, from {{der|en|la|divisio|divisio, divisio
 * Afrikaans: {{t|af|afdeling}}
 * Armenian: {{t+|hy|բաժին}}
 * Bulgarian: {{t+|bg|подразделение|n}}
+* Catalan: {{t+|ca|divisió|f}}
 * Czech: {{t|cs|divize|f}}
 * Dutch: {{t+|nl|afdeling|f}}, {{t+|nl|divisie|f}}, {{t+|nl|eenheid|f}}
 * French: {{t+|fr|division|f}}
