t+ca:[[multiplicació]] ([[WT:EDIT|Assisted]]) <multiplication#49126915>

--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -43,6 +43,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 * Arabic: {{t+|ar|ضرب}}
 * Armenian: {{t+|hy|բազմապատկում}}
 * Bashkir: {{t|ba|ҡабатлау|sc=Cyrl}}
+* Catalan: {{t+|ca|multiplicació|f}}
 * Chinese:
 *: Mandarin: {{t+|cmn|乘法|tr=chéngfǎ}}
 * Czech: {{t|cs|násobení|n}}
