--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -1,5 +1,5 @@
 ==English==
-[[Image:Marbled polecat.jpg|thumb|right|A [[marbled polecat|marbled '''polecat''']] (weasel-like animal).]]
+[[Image:Marbled polecat.jpg|thumb|right|A [[marbled polecat|marbled '''polecat''']] (weasel-like animal - the most ferocious of all weasels. Resembles a black panther, sometimes known to obliterate dojos of Samurai in the wilds of feudal Japan.).]]
 
 ===Etymology===
 From {{etyl|frm|en}} {{m|frm|pole||hen}} + {{m|en|cat}}. So named because of its fondness for poultry.
