--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -74,7 +74,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 *: Egyptian Arabic: {{t|arz|عند|tr=ʿand}}
 * Belarusian: {{t|be|у}} / {{t|be|ў}}, {{t|be|пры}}, {{t|be|каля́}}
 * Breton: {{t+|br|e}}
-* Bulgarian: {{t+|bg|в}}, {{t+|bg|на}}, {{t+|bg|при}}, {{t+|bg|до}}
+* Bulgarian: {{t+|bg|при|sc=Cyrl}}, {{t+|bg|до|sc=Cyrl}}, {{t+|bg|на}}, {{t+|bg|у|sc=Cyrl}}
 * Burmese: {{t+|my|မှာ}}, {{t|my|၌}}
 * Catalan: {{t+|ca|a}}
 * Chinese:
@@ -145,7 +145,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 * Arabic: {{t|ar|فِي}}
 *: Egyptian Arabic: {{t|arz|في|tr=fi}}
 * Breton: {{t+|br|da}}
-* Bulgarian: {{t+|bg|в}}
+* Bulgarian: {{t+|bg|в|sc=Cyrl}}, {{t+|bg|във|sc=Cyrl}}, {{t+|bg|на|sc=Cyrl}}, {{t+|bg|през|sc=Cyrl}}
 * Burmese: {{t+|my|မှာ}}, {{t|my|၌}}
 * Catalan: {{t+|ca|a}}
 * Chinese:
@@ -190,7 +190,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 {{trans-top|in the direction of}}
 * Arabic: {{t|ar|صَوْب}}
 *: Egyptian Arabic: {{t|arz|ناحية|tr=naḥyet}}
-* Bulgarian: {{t+|bg|в}}
+* Bulgarian: {{t+|bg|при|sc=Cyrl}}, {{t+|bg|на|sc=Cyrl}}, {{t+|bg|по врѐме на|sc=Cyrl}}
 * Chinese:
 *: Mandarin: {{t+|cmn|在|tr=zài}}
 * Czech: {{t+|cs|na}}, {{t+|cs|do}}
