--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -113,7 +113,7 @@ From {{etyl|enm|en}} {{m|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|a
 * Berber:
 *: Tashelhit: {{t|shi|dax}}
 * Breton: {{t+|br|adarre}}
-* Bulgarian: {{t+|bg|отно́во}}, {{t+|bg|пак}}
+* Bulgarian: {{t+|bg|повто̀рно|sc=Cyrl}}, {{t+|bg|отно̀во|sc=Cyrl}}, {{t+|bg|пак|sc=Cyrl}}
 * Burmese: {{t|my|နောက်တဖန်}}, {{t+|my|ထပ်}}, {{t+|my|ပြန်လှန်}}
 * Catalan: {{t|ca|una altra vegada}}, {{t|ca|de nou}}, {{t|ca|un altre cop}}
 * Cherokee: {{t|chr|ᎠᏏᏇ}}
