--- a/en/p/prank call.776672.wikitext
+++ b/en/p/prank call.776672.wikitext
@@ -13,6 +13,7 @@
 ====Translations====
 {{trans-top|practical joke made using the telephone}}
 * Arabic: {{t|ar|اِتِّصَال مَقْلَب|m}}
+* German: {{t|de|Telefonstreich|m}}
 * Japanese: {{t|ja|悪戯電話|tr=いたずらでんわ, itazura denwa}}
 {{trans-mid}}
 * Portuguese: {{t+|pt|trote|m}}
