/* English */ +trans table, Hungarian <myocyte#49193169>

--- a/en/m/myocyte.742099.wikitext
+++ b/en/m/myocyte.742099.wikitext
@@ -1,4 +1,5 @@
 ==English==
+{{wikipedia}}
 
 ===Etymology===
 {{confix|en|myo|cyte}}, thus literally "muscle cell."
@@ -6,8 +7,17 @@
 ===Noun===
 {{en-noun}}
 
-# a single [[muscle fiber]] cell
+# {{lb|en|cytology}} a single [[muscle fiber]] cell
+
+====Synonyms====
+* {{l|en|muscle cell}}
 
 ====Derived terms====
 * {{l|en|myocytic}}
 * {{l|en|myocytoma}}
+
+====Translations====
+{{trans-top|a single muscle fiber cell}}
+* Hungarian: {{t|hu|izomsejt}}
+{{trans-mid}}
+{{trans-bottom}}
