--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -73,7 +73,7 @@ From earlier {{m|en|gamel}}, from {{inh|en|enm|*gamlen}}, {{m|enm|*gamelen}}, va
 
 ====Translations====
 {{trans-top|to take a risk, with the potential of a positive outcome}}
-* Arabic: {{t|ar|قَامَرَ|pf}}, {{t|ar|يُقَامِرُ|impf}}
+* Arabic: {{t|ar|قَامَرَ}}
 * Bulgarian: {{t+|bg|рискувам|sc=Cyrl}}
 * Chinese:
 *: Mandarin: {{t+|cmn|賭博|sc=Hani}}, {{t+|cmn|赌博|tr=dǔbó|sc=Hani}}, {{t+|cmn|賭錢|sc=Hani}}, {{t+|cmn|赌钱|tr=dǔqián|sc=Hani}}
