--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -120,6 +120,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * Hindi: {{t+|hi|चक्की|f}}
 * Hungarian: {{t+|hu|malom}}
 * Ido: {{t+|io|muelilo}}
+* Indonesian: {{t+|id|kincir}}
 * Irish: {{t|ga|muileann|m}}
 * Italian: {{t+|it|mulino|m}}
 * Japanese: {{t|ja|粉砕機|tr=ふんさいき, funsaiki}}, {{t|ja|ミル|tr=miru}}
