--- a/en/n/nebbiolo.745861.wikitext
+++ b/en/n/nebbiolo.745861.wikitext
@@ -9,28 +9,33 @@
 
 ==Italian==
 {{was fwotd|2013|November|10|lang=it}}
-[[File:Close up of Nebbiolo cluster in Italy.jpg|thumb|'''Nebbiolo''' (uva).]]
-[[File:Cascin Adelaide Barolo & decanter.jpg|thumb|'''Nebbiolo''' (vino).]]
+[[File:Close up of Nebbiolo cluster in Italy.jpg|thumb|'''Nebbiolo''' grapes]]
+[[File:Cascin Adelaide Barolo & decanter.jpg|thumb|'''Nebbiolo''' wine]]
+
+===Alternative forms===
+* {{alter|it|nebiolo}}
 
 ===Etymology===
-From {{suffix|nebbia|t1=fog|olo|lang=it}}, because the grapes seem to be covered with fog.
+From {{affix|it|nebbia|t1=fog|-olo}}, because the grapes seem to be covered with fog.
 
 ===Pronunciation===
-* {{IPA|/nebˈbjɔlo/|lang=it}}
+* {{IPA|/nebˈbjɔ.lo/|[neˈbːjɔːlo]|lang=it}}
+* {{rhymes|ɔlo|lang=it}}
+* {{hyphenation|neb|biò|lo|lang=it}}
 
 ===Noun===
 {{it-noun|m}}
 
-# A {{l|en|grape}} variety cultivated in the {{l|en|Langhe}}
+# {{def|A [[grape]] variety cultivated in the [[Langhe]].}}
 #* '''1836''', Rocco Ragazzoni, ''Repertorio d’Agricoltura e di Scienze Economiche ed Industriali'', Volume 3, [http://books.google.com/books?id=tsisyAZUcOkC&pg=PA273&dq=%22nebbiolo%22#v=onepage page 273]:
 #*: Il '''nebbiolo''' continua a cuoprire i vigneti in tutto il resto del Canavesano, {{...}}
 #*:: The '''nebbiolo''' continues to cover the vineyards in all the rest of Canavese, {{...}}
 #* '''2011''', Federico Oldenburg, Luisa Cortese (translator), ''Il Profumo del Vino'', Planeta:
 #*: L’uva, naturalmente, è la stessa: la singolare '''nebbiolo'''.
 #*:: The grape, naturally, is the same: the unique '''nebbiolo'''.
-# A fine {{l|en|red wine}} made near {{l|en|Alba}} from these grapes
+# {{def|A fine [[red wine]] made near [[Alba]] from these grapes.}}
 #* '''2007''', Giorgio Bocca, ''Il Provinciale: Settant’anni di vita italiana'', Giangiacomo Feltrinelli, [http://books.google.com/books?id=O-EnoS8mm1IC&pg=PA289&dq=%22nebbiolo%22#v=onepage page 289]:
 #*: “Dove hai preso questo '''Nebbiolo'''?”. “Non è '''Nebbiolo''',” dice Angelo, “è Cabernet Sauvignon.”
 #*:: “Where did you get this '''Nebbiolo'''?”. “It’s not '''nebbiolo''', said Angelo, “it is Cabernet Sauvignon.”
 
-[[Category:it:Wine]]
+{{topics|it|Grapevines|Wine}}
