--- a/en/n/nebbiolo.745861.wikitext
+++ b/en/n/nebbiolo.745861.wikitext
@@ -27,15 +27,32 @@ From {{affix|it|nebbia|t1=fog|-olo}}, because the grapes seem to be covered with
 {{it-noun|m}}
 
 # {{lb|it|usually|_|uncountable}} {{def|A [[grape]] variety cultivated in the [[Langhe]].}}
-#* '''1836''', Rocco Ragazzoni, ''Repertorio d’Agricoltura e di Scienze Economiche ed Industriali'', Volume 3, [http://books.google.com/books?id=tsisyAZUcOkC&pg=PA273&dq=%22nebbiolo%22#v=onepage page 273]:
-#*: Il '''nebbiolo''' continua a cuoprire i vigneti in tutto il resto del Canavesano, {{...}}
-#*:: The '''nebbiolo''' continues to cover the vineyards in all the rest of Canavese, {{...}}
-#* '''2011''', Federico Oldenburg, Luisa Cortese (translator), ''Il Profumo del Vino'', Planeta:
-#*: L’uva, naturalmente, è la stessa: la singolare '''nebbiolo'''.
-#*:: The grape, naturally, is the same: the unique '''nebbiolo'''.
+#* {{quote-book
+|year=1836
+|author=Rocco Ragazzoni
+|title=Repertorio d’Agricoltura e di Scienze Economiche ed Industriali
+|volume=3
+|pageurl=http://books.google.com/books?id=tsisyAZUcOkC&pg=PA273&dq=%22nebbiolo%22#v=onepage
+|page=273
+|passage=Il '''nebbiolo''' continua a cuoprire i vigneti in tutto il resto del Canavesano, {{...}}
+|translation=The '''nebbiolo''' continues to cover the vineyards in all the rest of Canavese, {{...}}}}
+#* {{quote-book
+|year=2011
+|author=Federico Oldenburg
+|author2=Luisa Cortese (translator)
+|title=Il Profumo del Vino
+|publisher=Planeta
+|passage=L’uva, naturalmente, è la stessa: la singolare '''nebbiolo'''.
+|translation=The grape, naturally, is the same: the unique '''nebbiolo'''.}}
 # {{lb|it|usually|_|uncountable}} {{def|A fine [[red wine]] made near [[Alba]] from these grapes.}}
-#* '''2007''', Giorgio Bocca, ''Il Provinciale: Settant’anni di vita italiana'', Giangiacomo Feltrinelli, [http://books.google.com/books?id=O-EnoS8mm1IC&pg=PA289&dq=%22nebbiolo%22#v=onepage page 289]:
-#*: “Dove hai preso questo '''Nebbiolo'''?”. “Non è '''Nebbiolo''',” dice Angelo, “è Cabernet Sauvignon.”
-#*:: “Where did you get this '''Nebbiolo'''?”. “It’s not '''nebbiolo''', said Angelo, “it is Cabernet Sauvignon.”
+#* {{quote-book
+|year=2007
+|author=Giorgio Bocca
+|title=Il Provinciale: Settant’anni di vita italiana
+|publisher=Giangiacomo Feltrinelli
+|pageurl=http://books.google.com/books?id=O-EnoS8mm1IC&pg=PA289&dq=%22nebbiolo%22#v=onepage
+|page=289
+|passage=“Dove hai preso questo '''Nebbiolo'''?”. “Non è '''Nebbiolo''',” dice Angelo, “è Cabernet Sauvignon.”
+|translation=“Where did you get this '''Nebbiolo'''?”. “It’s not '''nebbiolo''', said Angelo, “it is Cabernet Sauvignon.”}}
 
 {{topics|it|Grapevines|Wine}}
