--- a/en/n/nebbiolo.745861.wikitext
+++ b/en/n/nebbiolo.745861.wikitext
@@ -9,7 +9,7 @@
 * {{alter|it|nebiolo}}
 
 ===Etymology===
-From {{affix|it|nebbia|t1=fog|-olo}}, because the grapes seem to be covered with fog.
+From {{affix|it|nebbia|t1=fog|-olo}}, because the grapes seem to be covered with fog. Cognate with {{cog|pms|nebieul}}.
 
 ===Pronunciation===
 * {{IPA|/nebˈbjɔ.lo/|[neˈbːjɔːlo]|lang=it}}
