--- a/en/m/mongolism.720243.wikitext
+++ b/en/m/mongolism.720243.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-{{suffix|Mongol|ism|lang=en}}, coined by [[:w:John Langdon Down|John Langdon Down]]
+{{suffix|Mongol|ism|lang=en}}, coined by {{w|John Langdon Down}}.
 
 ===Noun===
 {{wikipedia|Down syndrome}}
