--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -30,7 +30,7 @@ From {{etyl|ms|id}} {{m|ms|bahasa}}, from {{etyl|sa|id}} {{m|sa|भाषा||la
 * {{l|id|pakar bahasa}}
 
 ====Descendants====
-* {{desc|bor=1|en|Bahasa}} {{i|with {{l|ms|bahasa}}}}
+* {{desc|bor=1|en|Bahasa}} {{i|with Malay {{l|ms|bahasa}}}}
 
 [[Category:id:Language]]
 
