--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -56,5 +56,6 @@ From {{etyl|sa|ms}} {{m|sa|भाषा||language}}.
 
 ====Descendants====
 * {{desc|bor=1|en|Bahasa}} {{i|with Indonesian {{l|id|bahasa}}}}
+* {{desc|id|bahasa}}
 
 [[Category:ms:Language]]
