--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -58,6 +58,7 @@ From {{etyl|sa|ms}} {{m|sa|भाषा||language}}.
 ====Descendants====
 * {{desc|bor=1|en|Bahasa}} {{i|with Indonesian {{l|id|bahasa}}}}
 * {{desc|id|bahasa}}
+** {{desc|bor=1|nl|bahasa}}
 ** {{desc|bor=1|en|Bahasa}} {{i|with Malay {{l|ms|bahasa}}}}
 
 
