--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -6,7 +6,7 @@
 From {{inh|en|enm|rotten}}, {{m|enm|roten}}, from {{inh|en|ang|rotian||to rot, become corrupted, ulcerate, putrefy}}, from {{inh|en|gem-pro|*rutōną||to rot}}, from {{der|en|ine-pro|*rewd-||to tear}}. Cognate with {{cog|fy|rotsje||to rot}}, {{cog|nl|rotten||to rot}}, {{cog|de|verrotten||to rot}} and regional {{m|de|rößen||to steep flax}}, {{cog|is|rotna||to rot}}. See {{l|en|rotten}}.
 
 ===Pronunciation===
-* {{a|GenAM}} {{IPA|[ɹɑt]|lang=en}}
+* {{a|GA}} {{IPA|[ɹɑt]|lang=en}}
 * {{audio|en-us-rot.ogg|Audio (US)|lang=en}}
 * {{rhymes|ɒt|lang=en}}
 
