--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -28,6 +28,7 @@ Borrowed from {{bor|en|nl|bamboe}}, from {{etyl|pt|en}} {{m|pt|bambu}}, from {{e
 
 ====Descendants====
 * {{desc|bor=1|sq|bambu}}
+* {{desc|bor=1|fi|bambu}}
 
 ====Translations====
 {{trans-top|plant}}
