--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -30,6 +30,7 @@ Borrowed from {{bor|en|nl|bamboe}}, from {{etyl|pt|en}} {{m|pt|bambu}}, from {{e
 * {{desc|bor=1|sq|bambu}}
 * {{desc|bor=1|fi|bambu}}
 * {{desc|bor=1|el|μπαμπού}}
+* {{desc|bor=1|kky|bambu}}
 
 ====Translations====
 {{trans-top|plant}}
